[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -39,13 +39,26 @@ DEADLINE: <2022-01-12 周三 23:00 +1m> SCHEDULED: <2022-01-12 周三 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-01-03 周一 23:00 ++1w> SCHEDULED: <2022-01-01 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                    :event:
+DEADLINE: <2022-01-17 周一 23:00 ++1w> SCHEDULED: <2022-01-15 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-12-25 周六 15:42]
+:LAST_REPEAT: [2022-01-08 周六 16:17]
 :END:
+- State "DONE"       from "TODO"       [2022-01-08 周六 16:17] \\
+  1. 研究正交摄像机使用方式, 产出一个类用来方便的控制相机的移动以及输出
+  2. 支持技能结束返回原位
+  3. 优化战斗代码
+  4. 更新战斗配置文档
+  ------------------------------------------------
+- State "DONE"       from "TODO"       [2022-01-04 周二 09:52] \\
+  1. 第四版战斗优化, 优化效果播放顺序, 新增嵌套行为播放逻辑
+  2. 新增部分受击蓝图和受击表现
+  3. 迁移负责模块的常量到对应的netdefine文件中
+  4. 研究摄像机的使用方式
+  ------------------------------------------------
+  1. 3天长假有点爽哦
 - State "DONE"       from "TODO"       [2021-12-25 周六 15:42] \\
   1. 完成第四版战斗解析器改版和测试
      - 行为定义变更, 改为多段式行为
@@ -535,13 +548,31 @@ DEADLINE: <2022-01-03 周一 23:00 ++1w> SCHEDULED: <2022-01-01 周六 18:00 ++1
   ------------------------------------------------
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
-** TODO [#A] 每月归档到年度文件                                      :event:
-DEADLINE: <2021-12-30 周四 23:00 ++1m> SCHEDULED: <2021-12-30 周四 09:00 ++1m>
+** TODO [#A] 每月归档到年度文件                                     :event:
+DEADLINE: <2022-01-30 周日 23:00 ++1m> SCHEDULED: <2022-01-30 周日 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-11-30 周二 20:55]
+:LAST_REPEAT: [2021-12-30 周四 20:25]
 :END:
+- State "DONE"       from "TODO"       [2021-12-30 周四 20:25] \\
+  工作上:
+  1. 优化第三版战斗表现, 死亡时不会播放行为
+  2. 处理备战界面属性不会刷新的问题
+  3. 新增根据光环显示不同效果的光环控件, 并加入到编辑器进行编辑
+  4. 新增几个ui映射来处理不同道具使用不同底图, 边框
+  5. 将英雄山装备稀有度修改为道具品质
+  6. 新增拖拽控件, 用来管理容器内节点, 使其可以任意方向拖拽
+  7. 实现战斗中播放法宝激活效果
+  8. 编写年报
+  9. 实现第四版战斗解析
+  10. 第四版战斗优化, 优化效果播放顺序, 新增嵌套行为播放逻辑
+  11. 将受击表现从蓝图击中信号触发分离, 改为由受击指令触发
+  12. 新增部分受击蓝图和受击表现
+  13. 迁移负责模块的常量到对应的netdefine文件中
+  生活上:
+  1. 阅读完 <解读基金, 我的投资观与实践>
+  2. 弹射世界还不错哦, 挺好玩的
 - State "DONE"       from "TODO"       [2021-11-30 周二 20:55] \\
   工作上:
   1. 实现了一套新的战斗解析器和战斗打包，通过每个行为的前摇后摇来控制播放顺序
@@ -645,12 +676,14 @@ SCHEDULED: <2021-12-20 周一 19:59 +1m>
 :LOGGING: logrepeat DONE(@)
 :END:
 ** TODO [#A] 自学unity                                               :event:
-SCHEDULED: <2021-12-26 周日 09:00 +1w>
+SCHEDULED: <2022-01-09 周日 09:00 +1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-12-20 周一 08:59]
+:LAST_REPEAT: [2022-01-05 周三 09:30]
 :END:
+- State "DONE"       from "TODO"       [2022-01-05 周三 09:30]
+- State "DONE"       from "TODO"       [2021-12-27 周一 20:45]
 - State "DONE"       from "TODO"       [2021-12-20 周一 08:59]
 - State "DONE"       from "TODO"       [2021-12-13 周一 09:08]
 :LOGBOOK:
