--- a/src/org/ref/life/软技能.org
+++ b/src/org/ref/life/软技能.org
@@ -233,3 +233,92 @@ cons: 需要多种技能, 风险大, 长时间工作
 3. 保持活跃度, 每周至少都要有产出(通过使用Buffer类似的工具来一次性同步全部社交平
    台的更新)
 4. 推荐使用Twitter和LinkedIn作为你的主要社交媒体
+
+** 演讲
+演讲可以直接增加听众对你的认同, 建立一种独特的连接, 这种连接是无法通过书籍, 视频
+得到的
+1. 如果你不会演讲, 需要循序渐进
+   1. 在工作场合分享
+   2. 向代码训练营申请主题演讲
+   3. 向各种开发者打会申请演讲
+2. 通过现场培训或者是录制视频培训, 都是建立自己声望的一种很棒的方式
+
+** 著书立说
+如果你想被业界看做值得信赖的人, 你应该写一本书, 大众观点认为, 如果某个人在某个领
+域发表过文章或者书籍, 那他很可能是这个领域的专家, 成为一个专家对传播你的声望没有
+任何坏处
+1. 除了书籍, 很少有方式能够让他人在10-15个小时集中接受你的信息
+2. 注意, 出版书籍一般不会让你赚到钱, 但这是提升声望, 建立学科权威地位的最好方式之
+   一. 建立之后将会带给你无数潜在的机会.
+3. 如果想要获得出版机会, 最好准备一份翔实的纲要提供给出版商. 如果你本身有大量的粉
+   丝, 那么出版商接受的机会会大得多
+4. 可以通过自出版的方式出书, 尽管少了很多渠道, 但是也少了很多额外的开销. 通过
+   Leanpub, Amazon Kindle都可以进行电子书自出版
+
+** 克服恐惧
+如果你真的想在自我营销上获得成功, 一定要客服我们大多数人都有的一种恐惧, "看起来
+像个傻瓜"
+1. 万事开头难, 任何人第一次面对挑战都要克服不适感, 比如第一次上台演讲, 第一次发
+   博客. 但只要你持之以恒, 原来让你不适的东西你都会应对自如
+2. 看起来像傻瓜实际上也无所谓, 在演讲台上哆哆嗦嗦, 汗如雨下可能会让觉得很可笑, 但
+   过了之后根本没人记住这些. 你还记得你上次起哄的对象吗?
+3. 勇往直前, 不要害怕批评. 在完美的事物也会被抨击, 你永远没办法满足所有人.
+
+* 学习
+教育就是把在学校学到的知识都忘光之后剩下的东西
+** 如何自我教育
+自我教育最重要的一点就是在学习的过程中付诸实践, 所有生物在玩耍的时候都能快速掌握
+很多知识. 当我们在一个事情进行实践, 进行发挥的时候, 我们的内心就会倾向于吸收更多
+知识, 思考更有意义的问题.
+1. 自我教育的循环为: 简单浏览学习->付诸实践->带着实践中发现的问题有目的的学习->
+   重新应用于实践->...重复之前过程...->传授与他人
+** 十步学习法
+很多时候, 通读一本书籍并不是学习的最佳方式, 真正重要的东西会淹没在细枝末节中. 所
+以在学习之前需要先明确以下几点:
+- 如何开始 :: 要想使用这门技术, 我需要了解哪些基础知识
+- 学科范围 :: 我现在学习的内容范围有多大
+- 基础知识 :: 学习哪20%的内容就可以解决80%的问题
+- 基本体系
+  首先对自己即将学习的内容有基本的了解, 利用这些信息勾勒出学习的范围, 然后找资源
+  帮助自己学习. 然后创建学习计划. 开始进行LDLT(learning, Doing, Learning,
+  Teaching)
+- 主要步骤
+  1. 了解全局   |
+  2. 确定范围   |一
+  3. 定义目标   |次
+  4. 寻找资源   |性
+  5. 创建计划   |
+  6. 筛选资源   |
+  7. 开始学习, 浅尝辄止   |重
+  8. 动手操作, 边玩边学   |复
+  9. 全面掌握, 学以致用   |进
+  10. 乐为人师, 融会贯通  |行
+*** 前六步
+**** 了解全局
+很多时候我们对自己学习的内容没有全面的认识, 即根本不知道自己不知道(unknown unknowns),
+所以在学习之前通过网页浏览的方式对自己将要学习的主题有一个大概的认识
+**** 确定范围
+集中精力明确自己究竟要学什么, 比如学习物理这个目标是不切实际的, 因为你永远不可能学完,
+但是如果你最近对弹簧的原理很困惑, 那么学习胡克定律就是一个很务实的主题, 范围确定,
+学完也可以解决你的疑惑.
+在学习的过程中切记不要分心去学习其他主题. 如果你的时间充裕, 那么你可以将主题定的
+更大一点
+**** 定义目标
+设定一个学习成功的标准, 这个标准应该是无二义, 具体的. 用来衡量自己是否完成了任务
+**** 寻找资源
+尽可能多寻找多种不同的资源(而不是单一的资源), 包括但不限于:
+- 图书
+- 博客文章
+- 在线视频
+- 专家
+- 播客
+- 源代码
+- 示例项目
+- 在线文档
+
+**** 创建学习计划
+打造一个循序渐进的学习计划, 这个计划的制定可以参考你前面的资源里知识的安排, 比如
+如果有好多资源都按照相同的次序安排章节, 那么你的学习计划也可以依照这个来制定
+**** 筛选资源
+将第四步找到的资源大概浏览一遍, 确定哪些资源能够覆盖你的学习计划, 并筛选出最优质
+的几个作为主要参考资料
