--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -13,12 +13,14 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-01-01 周六 18:00 ++1w> DEADLINE: <2022-01-03 周一 12:00 ++1w>
+** TODO [#A] 完成每周周报                                             :work:
+SCHEDULED: <2022-01-15 周六 18:00 ++1w> DEADLINE: <2022-01-17 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-12-25 周六 15:47]
+:LAST_REPEAT: [2022-01-08 周六 16:50]
 :END:
+- State "DONE"       from "TODO"       [2022-01-08 周六 16:50]
+- State "DONE"       from "TODO"       [2022-01-04 周二 11:10]
 - State "DONE"       from "TODO"       [2021-12-25 周六 15:47]
 - State "DONE"       from "TODO"       [2021-12-20 周一 09:00]
 - State "DONE"       from "TODO"       [2021-12-11 周六 16:38]
@@ -60,13 +62,21 @@ SCHEDULED: <2022-01-01 周六 18:00 ++1w> DEADLINE: <2022-01-03 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-12-26 周日 09:00 ++1d>
+SCHEDULED: <2022-01-08 周六 09:00 ++1d>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-12-24 周五 09:58]
+:LAST_REPEAT: [2022-01-07 周五 09:57]
 :END:
 
+- State "DONE"       from "TODO"       [2022-01-07 周五 09:57]
+- State "DONE"       from "TODO"       [2022-01-07 周五 09:57]
+- State "DONE"       from "TODO"       [2022-01-07 周五 09:57]
+- State "DONE"       from "TODO"       [2022-01-06 周四 11:19]
+- State "DONE"       from "TODO"       [2022-01-05 周三 20:29]
+- State "DONE"       from "TODO"       [2021-12-29 周三 13:10]
+- State "DONE"       from "TODO"       [2021-12-28 周二 19:48]
+- State "DONE"       from "TODO"       [2021-12-27 周一 20:45]
 - State "DONE"       from "TODO"       [2021-12-24 周五 09:58]
 - State "DONE"       from "TODO"       [2021-12-23 周四 10:58]
 - State "DONE"       from "TODO"       [2021-12-22 周三 20:29]
@@ -259,7 +269,7 @@ SCHEDULED: <2021-12-26 周日 09:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#B] 学习《重构 改善既有代码的设计》                        :learn:
-SCHEDULED: <2021-10-12 周三 09:00 ++1d>
+SCHEDULED: <2022-02-12 周六 09:00 ++1d>
 ** TODO [#A] 阅读穷爸爸,富爸爸                                      :learn:
 SCHEDULED: <2021-11-29 周一 09:34>
 ** TODO [#A] 学习《代码之外的生存指南》                             :learn:
@@ -272,89 +282,28 @@ CLOCK: [2021-12-11 周六 14:21]--[2021-12-11 周六 14:46] =>  0:25
 CLOCK: [2021-12-10 周五 20:27]--[2021-12-10 周五 20:52] =>  0:25
 CLOCK: [2021-12-10 周五 19:57]--[2021-12-10 周五 20:22] =>  0:25
 :END:
-** Archive                                                        :ARCHIVE:
-*** DONE [#A] 优化新表现存在的问题                                     :m8:
-CLOSED: [2021-11-30 周二 15:42] SCHEDULED: <2021-11-17 周三 09:12>
+** TODO [#A] 优化战斗代码, 完善文档                                    :m8:
+SCHEDULED: <2022-01-07 周五 10:28>
+** Archive                                                         :ARCHIVE:
+*** DONE [#A] 研究摄像机的使用方式                                     :m8:
+CLOSED: [2022-01-05 周三 14:12] SCHEDULED: <2021-12-29 周三 13:00>
 :PROPERTIES:
-:ARCHIVE_TIME: 2021-12-04 周六 16:07
+:ARCHIVE_TIME: 2022-01-08 周六 16:50
 :END:
-1. 死亡暂停行为播放
-*** DONE [#A] 小狗钱钱阅后总结                                      :learn:
-CLOSED: [2021-11-27 周六 17:05] DEADLINE: <2021-11-30 周二> SCHEDULED: <2021-11-22 周一 09:31>
+*** DONE [#A] Localsave迁移                                            :m8:
+CLOSED: [2022-01-05 周三 09:30]
 :PROPERTIES:
-:ARCHIVE_TIME: 2021-12-04 周六 16:07
+:ARCHIVE_TIME: 2022-01-08 周六 16:50
 :END:
-*** DONE [#A] 阅读 <解读基金, 我的投资观与实践>                     :learn:
-CLOSED: [2021-12-01 周三 16:30] DEADLINE: <2021-12-01 周三> SCHEDULED: <2021-11-22 周一 09:36>
+*** DONE [#A] 支持技能结束返回原位                                     :m8:
+CLOSED: [2022-01-06 周四 11:19] SCHEDULED: <2022-01-03 周一 13:00>
 :PROPERTIES:
-:ARCHIVE_TIME: 2021-12-04 周六 16:07
+:ARCHIVE_TIME: 2022-01-08 周六 16:50
 :END:
-*** DONE [#A] 英雄山章节地图改为拖拽浏览                               :m8:
-CLOSED: [2021-11-26 周五 16:44] SCHEDULED: <2021-11-24 周三 16:43>
+*** DONE [#A] 更新战斗配置文档                                         :m8:
+CLOSED: [2022-01-07 周五 09:58] SCHEDULED: <2022-01-05 周三 14:13>
 :PROPERTIES:
-:ARCHIVE_TIME: 2021-12-04 周六 16:07
-:END:
-*** DONE [#A] 底图品质对应                                             :m8:
-CLOSED: [2021-12-02 周四 20:05] DEADLINE: <2021-12-04 周六 13:00> SCHEDULED: <2021-11-30 周二 09:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-12-04 周六 16:07
-:END:
-- [X] 英雄山装备底图
-- [X] 英雄脚下光环
-- [X] 道具ui合并
-- [X] 道具底图
-*** DONE [#A] 道具品质和英雄山装备稀有度统一                         :work:
-CLOSED: [2021-12-10 周五 10:27] SCHEDULED: <2021-12-07 周二 16:58>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-12-11 周六 16:38
-:END:
-*** DONE [#A] 整理游戏功能和玩法                                       :m8:
-CLOSED: [2021-12-08 周三 10:31] SCHEDULED: <2021-11-29 周一 09:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-12-11 周六 16:38
-:END:
-*** DONE [#A] 编写年报                                                 :m8:
-CLOSED: [2021-12-06 周一 15:46] DEADLINE: <2021-12-08 周三> SCHEDULED: <2021-12-06 周一 16:09>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-12-11 周六 16:38
-:END:
-*** DONE [#A] 战斗内法宝激活效果                                     :work:
-CLOSED: [2021-12-07 周二 15:12] SCHEDULED: <2021-12-07 周二 15:12>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-12-11 周六 16:38
-:END:
-*** DONE [#A] 建立星级底图映射关系                                   :work:
-CLOSED: [2021-12-09 周四 16:57] SCHEDULED: <2021-12-07 周二 16:57>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-12-11 周六 16:38
-:END:
-*** DONE [#A] 处理备战界面属性未刷新的问题                             :m8:
-CLOSED: [2021-12-13 周一 14:59] SCHEDULED: <2021-12-10 周五 09:12>
-:PROPERTIES:
-:Effort:   4:00
-:ARCHIVE_TIME: 2021-12-18 周六 18:01
-:END:
-:LOGBOOK:
-CLOCK: [2021-12-13 周一 14:35]--[2021-12-13 周一 14:59] =>  0:24
-CLOCK: [2021-12-13 周一 13:40]--[2021-12-13 周一 14:05] =>  0:25
-CLOCK: [2021-12-13 周一 13:10]--[2021-12-13 周一 13:35] =>  0:25
-CLOCK: [2021-12-13 周一 11:25]--[2021-12-13 周一 11:50] =>  0:25
-CLOCK: [2021-12-13 周一 10:55]--[2021-12-13 周一 11:20] =>  0:25
-CLOCK: [2021-12-10 周五 17:27]--[2021-12-10 周五 17:40] =>  0:13
-CLOCK: [2021-12-10 周五 16:52]--[2021-12-10 周五 17:17] =>  0:25
-CLOCK: [2021-12-10 周五 16:22]--[2021-12-10 周五 16:47] =>  0:25
-CLOCK: [2021-12-10 周五 15:32]--[2021-12-10 周五 15:57] =>  0:25
-CLOCK: [2021-12-10 周五 14:48]--[2021-12-10 周五 15:13] =>  0:25
-CLOCK: [2021-12-10 周五 13:49]--[2021-12-10 周五 14:14] =>  0:25
-CLOCK: [2021-12-10 周五 13:19]--[2021-12-10 周五 13:44] =>  0:25
-CLOCK: [2021-12-10 周五 11:28]--[2021-12-10 周五 11:39] =>  0:11
-CLOCK: [2021-12-10 周五 10:58]--[2021-12-10 周五 11:23] =>  0:25
-CLOCK: [2021-12-10 周五 10:28]--[2021-12-10 周五 10:53] =>  0:25
-:END:
-*** DONE [#A] 将受击从技能释放中分离                                   :m8:
-CLOSED: [2021-12-25 周六 15:42] SCHEDULED: <2021-12-25 周六 15:41>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-12-25 周六 15:48
+:ARCHIVE_TIME: 2022-01-08 周六 16:50
 :END:
 * Appointment
 * Project
@@ -374,59 +323,6 @@ CLOSED: [2021-11-01 周一 14:11] SCHEDULED: <2021-10-19 周二 20:46>
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 *** TODO spine动画
-:PROPERTIES:                          
-:TRIGGER+: parent todo!(DONE)
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-** Archive                                                         :ARCHIVE:
-*** DONE [#A] 第四版战斗协议解析                                       :m8:
-CLOSED: [2021-12-22 周三 19:38] SCHEDULED: <2021-12-14 周二 10:19> DEADLINE: <2021-12-22 周三 10:19>
-:PROPERTIES:
-:BLOCKER: children
-:ARCHIVE_TIME: 2021-12-25 周六 15:48
-:END:                          
-**** DONE 制定协议
-CLOSED: [2021-12-15 周三 09:51] SCHEDULED: <2021-12-14 周二>
-:PROPERTIES:                          
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:                          
-:LOGBOOK:
-CLOCK: [2021-12-14 周二 11:05]--[2021-12-14 周二 11:30] =>  0:25
-CLOCK: [2021-12-14 周二 10:35]--[2021-12-14 周二 11:00] =>  0:25
-:END:
-**** DONE 编写解析器                          
-CLOSED: [2021-12-18 周六 17:56] SCHEDULED: <2021-12-15 周三 09:51>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-:LOGBOOK:
-CLOCK: [2021-12-16 周四 20:29]--[2021-12-16 周四 20:54] =>  0:25
-CLOCK: [2021-12-16 周四 19:59]--[2021-12-16 周四 20:24] =>  0:25
-CLOCK: [2021-12-16 周四 19:24]--[2021-12-16 周四 19:49] =>  0:25
-CLOCK: [2021-12-16 周四 18:54]--[2021-12-16 周四 19:19] =>  0:25
-CLOCK: [2021-12-16 周四 17:18]--[2021-12-16 周四 17:43] =>  0:25
-CLOCK: [2021-12-16 周四 16:48]--[2021-12-16 周四 17:13] =>  0:25
-CLOCK: [2021-12-16 周四 16:18]--[2021-12-16 周四 16:43] =>  0:25
-CLOCK: [2021-12-16 周四 15:48]--[2021-12-16 周四 16:13] =>  0:25
-CLOCK: [2021-12-16 周四 15:13]--[2021-12-16 周四 15:38] =>  0:25
-CLOCK: [2021-12-16 周四 14:43]--[2021-12-16 周四 15:08] =>  0:25
-CLOCK: [2021-12-16 周四 14:13]--[2021-12-16 周四 14:38] =>  0:25
-CLOCK: [2021-12-16 周四 13:43]--[2021-12-16 周四 14:08] =>  0:25
-CLOCK: [2021-12-15 周三 17:20]--[2021-12-15 周三 17:45] =>  0:25
-CLOCK: [2021-12-15 周三 16:50]--[2021-12-15 周三 17:15] =>  0:25
-CLOCK: [2021-12-15 周三 16:15]--[2021-12-15 周三 16:40] =>  0:25
-CLOCK: [2021-12-15 周三 15:45]--[2021-12-15 周三 16:10] =>  0:25
-CLOCK: [2021-12-15 周三 15:15]--[2021-12-15 周三 15:40] =>  0:25
-CLOCK: [2021-12-15 周三 14:27]--[2021-12-15 周三 14:52] =>  0:25
-CLOCK: [2021-12-15 周三 13:52]--[2021-12-15 周三 14:17] =>  0:25
-CLOCK: [2021-12-15 周三 13:22]--[2021-12-15 周三 13:47] =>  0:25
-CLOCK: [2021-12-15 周三 11:22]--[2021-12-15 周三 11:47] =>  0:25
-CLOCK: [2021-12-15 周三 10:52]--[2021-12-15 周三 11:17] =>  0:25
-CLOCK: [2021-12-15 周三 10:22]--[2021-12-15 周三 10:47] =>  0:25
-CLOCK: [2021-12-15 周三 09:52]--[2021-12-15 周三 10:17] =>  0:25
-:END:
-**** DONE 对接测试
-CLOSED: [2021-12-22 周三 19:38] SCHEDULED: <2021-12-18 周六 17:56>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
