--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -13,12 +13,16 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每周周报                                             :work:
-SCHEDULED: <2022-01-15 周六 18:00 ++1w> DEADLINE: <2022-01-17 周一 12:00 ++1w>
+** TODO [#A] 完成每周周报                                            :work:
+SCHEDULED: <2022-01-22 周六 18:00 ++1w> DEADLINE: <2022-01-24 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-01-08 周六 16:50]
+:LAST_REPEAT: [2022-01-15 周六 17:21]
 :END:
+- State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
+- State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
+- State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
+- State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
 - State "DONE"       from "TODO"       [2022-01-08 周六 16:50]
 - State "DONE"       from "TODO"       [2022-01-04 周二 11:10]
 - State "DONE"       from "TODO"       [2021-12-25 周六 15:47]
@@ -62,13 +66,14 @@ SCHEDULED: <2022-01-15 周六 18:00 ++1w> DEADLINE: <2022-01-17 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2022-01-08 周六 09:00 ++1d>
+SCHEDULED: <2022-01-16 周日 09:00 ++1d>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2022-01-07 周五 09:57]
+:LAST_REPEAT: [2022-01-15 周六 16:24]
 :END:
 
+- State "DONE"       from "TODO"       [2022-01-15 周六 16:24]
 - State "DONE"       from "TODO"       [2022-01-07 周五 09:57]
 - State "DONE"       from "TODO"       [2022-01-07 周五 09:57]
 - State "DONE"       from "TODO"       [2022-01-07 周五 09:57]
@@ -304,6 +309,23 @@ CLOSED: [2022-01-06 周四 11:19] SCHEDULED: <2022-01-03 周一 13:00>
 CLOSED: [2022-01-07 周五 09:58] SCHEDULED: <2022-01-05 周三 14:13>
 :PROPERTIES:
 :ARCHIVE_TIME: 2022-01-08 周六 16:50
+:END:
+** DONE [#A] 第三版行动触发顺序改版                                     :m8:
+CLOSED: [2022-01-14 周五 13:26] SCHEDULED: <2022-01-10 周一 13:00>
+:LOGBOOK:
+CLOCK: [2022-01-11 周二 20:06]--[2022-01-11 周二 20:31] =>  0:25
+CLOCK: [2022-01-11 周二 19:31]--[2022-01-11 周二 19:56] =>  0:25
+CLOCK: [2022-01-11 周二 19:01]--[2022-01-11 周二 19:26] =>  0:25
+CLOCK: [2022-01-11 周二 18:31]--[2022-01-11 周二 18:56] =>  0:25
+CLOCK: [2022-01-11 周二 18:01]--[2022-01-11 周二 18:26] =>  0:25
+CLOCK: [2022-01-11 周二 17:26]--[2022-01-11 周二 17:51] =>  0:25
+CLOCK: [2022-01-11 周二 16:56]--[2022-01-11 周二 17:21] =>  0:25
+CLOCK: [2022-01-11 周二 16:26]--[2022-01-11 周二 16:51] =>  0:25
+CLOCK: [2022-01-11 周二 15:56]--[2022-01-11 周二 16:21] =>  0:25
+CLOCK: [2022-01-11 周二 15:21]--[2022-01-11 周二 15:46] =>  0:25
+CLOCK: [2022-01-11 周二 14:51]--[2022-01-11 周二 15:16] =>  0:25
+CLOCK: [2022-01-11 周二 14:21]--[2022-01-11 周二 14:46] =>  0:25
+CLOCK: [2022-01-11 周二 13:51]--[2022-01-11 周二 14:16] =>  0:25
 :END:
 * Appointment
 * Project
