--- a/src/org/ref/life/软技能.org
+++ b/src/org/ref/life/软技能.org
@@ -322,3 +322,46 @@ cons: 需要多种技能, 风险大, 长时间工作
 **** 筛选资源
 将第四步找到的资源大概浏览一遍, 确定哪些资源能够覆盖你的学习计划, 并筛选出最优质
 的几个作为主要参考资料
+*** 后四步
+**** 开始学习, 浅尝辄止
+学习知识要恰到好处, 既能让你开始学习, 又不会让你多到无力探索. 专注掌握自己所需的,
+能够进行下一步的最少工作量.
+**** 动手操作, 边玩边学
+首先进行亲自操作和体验, 在这个过程中你会产生很多疑问. 这些问题引导着你走向真正重要
+的方向, 然后带着问题去学习, 你将会深刻的记住重要问题的答案
+**** 全面掌握, 学以致用
+根据前面步骤中产生的疑问, 深入的研究, 反复的试验来解决这些问题, 以好奇心来驱动自己
+进行学习, 不要害怕反复实践, 这会让你快速找到答案, 也能学到新的知识.
+**** 乐为人师, 融会贯通
+剖析并理解自己所学的知识, 内化到自己的思想, 并且要以能让他人理解的形式进行组织这些
+信息, 然后传授给他人. 在这个过程中, 你会发现很多你自以为掌握的知识实际上依然存在
+漏洞, 你会排除漏洞, 彻底掌握知识. 所以传授给别人知识是非常重要的一步.
+可以以多种形式传授给别人, 比如:
+- 博客文章
+- 发表演讲
+- 回答问题
+- 与朋友讨论
+
+** 寻找你的尤达
+拥有一位好的导师能够让你无需经过重重考验就可以拥有丰富的经验, 他可以迅速的帮你掌
+握一门技术, 比你自己学习要快得多.
+*** 导师的修养
+导师以各种各样的形式存在, 最成功的的职业教练往往不是职业运动员. 所以你不应该
+他平时生活中平平常常就对他的印象大打折扣, 最好的老师往往深藏不露.
+当我们去寻找导师时, 必须要知道我们不知道怎样做最好, 要认识到自己的逻辑推断可能
+是错误的(否则你也不需要寻找导师了), 你必须相信导师的成果.
+*** 什么样的人能成为你的导师
+1. 他曾经做到了我想做的
+2. 他帮助别人做到了我想做的
+根据以上两点, 你应该首先从你的周围, 从你的亲人朋友的关系网里寻找导师, 如果没找到
+可以通过本地的社群, 兴趣小组来寻找导师.
+如果你在一个公司内任职, 那么你的老板或者你的上级是成为导师的不二之选
+*** 虚拟导师
+如果找不到现实生活中的导师, 那么把书籍里的案例作为虚拟导师, 在书中的故事里你也
+可以学到很多
+
+*** 招募导师
+即便你能找到一位完美的导师, 你也没办法让对方收你为徒, 所以你需要想一下他需要什么,
+比如:
+1. 以免费工作换取学习机会
+2. 可以考虑请他吃饭, 在吃饭的过程中询问
