[org] update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -41,13 +41,28 @@ DEADLINE: <2022-02-12 周六 23:00 +1m> SCHEDULED: <2022-02-12 周六 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2022-01-24 周一 23:00 ++1w> SCHEDULED: <2022-01-22 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                   :event:
+DEADLINE: <2022-01-31 周一 23:00 ++1w> SCHEDULED: <2022-01-29 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-01-15 周六 16:25]
+:LAST_REPEAT: [2022-01-22 周六 15:02]
 :END:
+- State "DONE"       from "TODO"       [2022-01-22 周六 15:02] \\
+  1. 受伤和死亡表现优化:
+     - 死亡会就地死亡, 不会返回原地
+     - 受伤绑定到生命变化上, 而不是跳字
+     - 死亡时会停止播放所有动画
+  2. 优化战斗日志输出
+     - 将战斗日志翻译成可读的json形式, 方便进行后续处理
+  3. 优化导表解析器
+     - 两个抛出异常的取值函数, 异常可读, 方便快速定位问题
+     - 两个判断数据是否存在的函数
+     - 一个自定义接口用来动态生成代码
+  4. 删除战斗模块中存在的magickey
+  5. 战斗, 商店, 网络, 玩家模块的提示全部用导表prompt替换
+  ------------------------------------------------
+  1. 光炮沉了, 呜呜呜呜
 - State "DONE"       from "TODO"       [2022-01-15 周六 16:25] \\
   1. 完成行动解析改版:
      - 执行回调会递归合成到行动的最上层
@@ -686,12 +701,13 @@ SCHEDULED: <2021-12-20 周一 19:59 +1m>
 :LOGGING: logrepeat DONE(@)
 :END:
 ** TODO [#A] 自学unity                                               :event:
-SCHEDULED: <2022-01-16 周日 09:00 +1w>
+SCHEDULED: <2022-01-23 周日 09:00 +1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-01-11 周二 13:34]
+:LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
+- State "DONE"       from "TODO"       [2022-01-22 周六 15:07]
 - State "DONE"       from "TODO"       [2022-01-11 周二 13:34]
 - State "DONE"       from "TODO"       [2022-01-05 周三 09:30]
 - State "DONE"       from "TODO"       [2021-12-27 周一 20:45]
@@ -707,6 +723,8 @@ CLOCK: [2021-12-12 周日 15:02]--[2021-12-12 周日 15:27] =>  0:25
 CLOCK: [2021-12-12 周日 11:06]--[2021-12-12 周日 11:31] =>  0:25
 CLOCK: [2021-12-12 周日 10:28]--[2021-12-12 周日 10:53] =>  0:25
 :END:
+** TODO [#A] 给姥姥姥爷刘浩买点东西?                             :shopping:
+SCHEDULED: <2022-01-23 周日 15:01>
 * Appointment
 ** WAIT 购买xbox精英二代手柄                                     :shopping:
 <2021-11-01 周一 09:00>
@@ -730,5 +748,19 @@ SCHEDULED: <2021-06-12 周六 09:00>
 ** WAIT 爬火炉山                                                     :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
+** TODO 回家过年                                                    :event:
+[2022-01-27 周四 20:20]: 广州南->北京西 动卧
+[2022-01-28 周五 09:59]: 北京朝阳->赤峰 动车
+[2022-02-06 周日 09:31]: 赤峰->北京朝阳 动车
+[2022-02-06 周日 15:30]: 北京大兴->广州 飞机
+** TODO 和达文西聚餐                                                 :date:
+<2022-01-22 周六 14:53>
+佬麻雀-湘菜馆 科学大道54号
+** Archive                                                        :ARCHIVE:
+*** DONE 接种科兴第三针疫苗                                         :event:
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-01-22 周六 15:06
+:END:
+<2022-01-18 周二 14:30>
 * Project
 * Someday
