--- a/src/org/ref/life/软技能.org
+++ b/src/org/ref/life/软技能.org
@@ -365,3 +365,22 @@ cons: 需要多种技能, 风险大, 长时间工作
 比如:
 1. 以免费工作换取学习机会
 2. 可以考虑请他吃饭, 在吃饭的过程中询问
+
+** 开山收徒
+1. 只要你领先别人一步, 你就能成为别人的导师. 所以显而易见, 你一定会在某个方面前人一
+   步, 所以每个人都能成为导师.
+2. 成为导师并不困难, 很多时候人们想不清楚问题只是因为当局者迷, 你在旁观者的角度很可
+   能轻松的看出答案并帮助到他
+3. 成为导师有很多好处:
+   - 获得成就感
+   - 帮助你加深对知识的理解
+   - 你的徒弟有朝一日可能会帮助到你
+   - 帮助别人成长的过程也是自己成长的过程
+4. 收徒要慎重, 要寻找品行端正, 坚持原则的人作为徒弟, 而不是懒惰不愿意付出的人
+5. 传授知识时要心态谦卑但信心满满, 没必要表现得什么都知道. 但是一定要对自己教授的
+   知识充满自信
+*** 传授知识的时候都发生了什么
+人类的大脑善于识别模式, 很容易使用这个模式来反复解决重复的问题, 你以为你理解了,
+但实际上你很肯能并不是理解了, 只是会用而已. 传授知识这个过程强迫你整理整个过程并
+将其整理为别人能够理解的说法. 在这个过程中你会很自然的将零碎的知识点串联到一起.
+以自己容易记忆的方式重新保存在脑海中并传递给别人. 知识是会遗忘的, 但是理解不会.
