--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -13,12 +13,13 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-01-22 周六 18:00 ++1w> DEADLINE: <2022-01-24 周一 12:00 ++1w>
+** TODO [#A] 完成每周周报                                             :work:
+SCHEDULED: <2022-01-29 周六 18:00 ++1w> DEADLINE: <2022-01-31 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-01-15 周六 17:21]
+:LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
+- State "DONE"       from "TODO"       [2022-01-22 周六 15:07]
 - State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
 - State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
 - State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
@@ -310,8 +311,11 @@ CLOSED: [2022-01-07 周五 09:58] SCHEDULED: <2022-01-05 周三 14:13>
 :PROPERTIES:
 :ARCHIVE_TIME: 2022-01-08 周六 16:50
 :END:
-** DONE [#A] 第三版行动触发顺序改版                                     :m8:
+*** DONE [#A] 第三版行动触发顺序改版                                   :m8:
 CLOSED: [2022-01-14 周五 13:26] SCHEDULED: <2022-01-10 周一 13:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-01-22 周六 15:06
+:END:
 :LOGBOOK:
 CLOCK: [2022-01-11 周二 20:06]--[2022-01-11 周二 20:31] =>  0:25
 CLOCK: [2022-01-11 周二 19:31]--[2022-01-11 周二 19:56] =>  0:25
@@ -326,6 +330,30 @@ CLOCK: [2022-01-11 周二 15:21]--[2022-01-11 周二 15:46] =>  0:25
 CLOCK: [2022-01-11 周二 14:51]--[2022-01-11 周二 15:16] =>  0:25
 CLOCK: [2022-01-11 周二 14:21]--[2022-01-11 周二 14:46] =>  0:25
 CLOCK: [2022-01-11 周二 13:51]--[2022-01-11 周二 14:16] =>  0:25
+:END:
+*** DONE [#A] 优化代码里的magic key                                    :m8:
+CLOSED: [2022-01-22 周六 10:28] SCHEDULED: <2022-01-18 周二 09:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-01-22 周六 15:06
+:END:
+*** DONE [#A] prompt提示信息配置导表                                   :m8:
+CLOSED: [2022-01-18 周二 11:38] SCHEDULED: <2022-01-18 周二 09:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-01-22 周六 15:06
+:END:
+:LOGBOOK:
+CLOCK: [2022-01-18 周二 10:06]--[2022-01-18 周二 10:31] =>  0:25
+CLOCK: [2022-01-18 周二 09:36]--[2022-01-18 周二 10:01] =>  0:25
+:END:
+*** DONE [#A] 优化战斗日志输出                                         :m8:
+CLOSED: [2022-01-22 周六 10:28] SCHEDULED: <2022-01-18 周二 15:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-01-22 周六 15:06
+:END:
+*** DONE [#A] 死亡和受伤表现优化                                       :m8:
+CLOSED: [2022-01-19 周三 17:16] SCHEDULED: <2022-01-19 周三 10:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-01-22 周六 15:06
 :END:
 * Appointment
 * Project
