[org]update note

--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -13,12 +13,13 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每周周报                                             :work:
-SCHEDULED: <2022-01-29 周六 18:00 ++1w> DEADLINE: <2022-01-31 周一 12:00 ++1w>
+** TODO [#A] 完成每周周报                                            :work:
+SCHEDULED: <2022-02-05 周六 18:00 ++1w> DEADLINE: <2022-02-07 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-01-22 周六 15:07]
+:LAST_REPEAT: [2022-01-27 周四 16:42]
 :END:
+- State "DONE"       from "TODO"       [2022-01-27 周四 16:42]
 - State "DONE"       from "TODO"       [2022-01-22 周六 15:07]
 - State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
 - State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
@@ -290,71 +291,6 @@ CLOCK: [2021-12-10 周五 19:57]--[2021-12-10 周五 20:22] =>  0:25
 :END:
 ** TODO [#A] 优化战斗代码, 完善文档                                    :m8:
 SCHEDULED: <2022-01-07 周五 10:28>
-** Archive                                                         :ARCHIVE:
-*** DONE [#A] 研究摄像机的使用方式                                     :m8:
-CLOSED: [2022-01-05 周三 14:12] SCHEDULED: <2021-12-29 周三 13:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-01-08 周六 16:50
-:END:
-*** DONE [#A] Localsave迁移                                            :m8:
-CLOSED: [2022-01-05 周三 09:30]
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-01-08 周六 16:50
-:END:
-*** DONE [#A] 支持技能结束返回原位                                     :m8:
-CLOSED: [2022-01-06 周四 11:19] SCHEDULED: <2022-01-03 周一 13:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-01-08 周六 16:50
-:END:
-*** DONE [#A] 更新战斗配置文档                                         :m8:
-CLOSED: [2022-01-07 周五 09:58] SCHEDULED: <2022-01-05 周三 14:13>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-01-08 周六 16:50
-:END:
-*** DONE [#A] 第三版行动触发顺序改版                                   :m8:
-CLOSED: [2022-01-14 周五 13:26] SCHEDULED: <2022-01-10 周一 13:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-01-22 周六 15:06
-:END:
-:LOGBOOK:
-CLOCK: [2022-01-11 周二 20:06]--[2022-01-11 周二 20:31] =>  0:25
-CLOCK: [2022-01-11 周二 19:31]--[2022-01-11 周二 19:56] =>  0:25
-CLOCK: [2022-01-11 周二 19:01]--[2022-01-11 周二 19:26] =>  0:25
-CLOCK: [2022-01-11 周二 18:31]--[2022-01-11 周二 18:56] =>  0:25
-CLOCK: [2022-01-11 周二 18:01]--[2022-01-11 周二 18:26] =>  0:25
-CLOCK: [2022-01-11 周二 17:26]--[2022-01-11 周二 17:51] =>  0:25
-CLOCK: [2022-01-11 周二 16:56]--[2022-01-11 周二 17:21] =>  0:25
-CLOCK: [2022-01-11 周二 16:26]--[2022-01-11 周二 16:51] =>  0:25
-CLOCK: [2022-01-11 周二 15:56]--[2022-01-11 周二 16:21] =>  0:25
-CLOCK: [2022-01-11 周二 15:21]--[2022-01-11 周二 15:46] =>  0:25
-CLOCK: [2022-01-11 周二 14:51]--[2022-01-11 周二 15:16] =>  0:25
-CLOCK: [2022-01-11 周二 14:21]--[2022-01-11 周二 14:46] =>  0:25
-CLOCK: [2022-01-11 周二 13:51]--[2022-01-11 周二 14:16] =>  0:25
-:END:
-*** DONE [#A] 优化代码里的magic key                                    :m8:
-CLOSED: [2022-01-22 周六 10:28] SCHEDULED: <2022-01-18 周二 09:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-01-22 周六 15:06
-:END:
-*** DONE [#A] prompt提示信息配置导表                                   :m8:
-CLOSED: [2022-01-18 周二 11:38] SCHEDULED: <2022-01-18 周二 09:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-01-22 周六 15:06
-:END:
-:LOGBOOK:
-CLOCK: [2022-01-18 周二 10:06]--[2022-01-18 周二 10:31] =>  0:25
-CLOCK: [2022-01-18 周二 09:36]--[2022-01-18 周二 10:01] =>  0:25
-:END:
-*** DONE [#A] 优化战斗日志输出                                         :m8:
-CLOSED: [2022-01-22 周六 10:28] SCHEDULED: <2022-01-18 周二 15:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-01-22 周六 15:06
-:END:
-*** DONE [#A] 死亡和受伤表现优化                                       :m8:
-CLOSED: [2022-01-19 周三 17:16] SCHEDULED: <2022-01-19 周三 10:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-01-22 周六 15:06
-:END:
 * Appointment
 * Project
 ** SCH [#A] 战斗表现学习                                               :m8:
