--- a/src/org/ref/life/软技能.org
+++ b/src/org/ref/life/软技能.org
@@ -384,3 +384,51 @@ cons: 需要多种技能, 风险大, 长时间工作
 但实际上你很肯能并不是理解了, 只是会用而已. 传授知识这个过程强迫你整理整个过程并
 将其整理为别人能够理解的说法. 在这个过程中你会很自然的将零碎的知识点串联到一起.
 以自己容易记忆的方式重新保存在脑海中并传递给别人. 知识是会遗忘的, 但是理解不会.
+
+** 你需要一个学位吗?
+学位是一个限制性的因素, 它会影响你可供选择的工作数量, 也会影响你的晋升. 总的来说
+没有学位会限制你的选择, 在这个前提下, 学位并不是成功地必备条件. 与你的学历相比,
+出色的能力能让你走得更远.
+*** 拥有学位的优缺点
+优势:
+- 接受软件相关的全面的系统性的教育
+- 无需经验就可以入行
+- 有更多的选择, 更容易转向管理岗位
+缺点:
+- 花费原本赚钱的时间去学习
+- 可能受困于思维定势, 难以打破
+*** 没有学位应该怎么做
+你不需要依靠经验, 经历来证明你的能力. 你可以:
+- 求职的时候提供一份自己的作品, github上的代码等等
+- 工作的时候利用业余时间考一个学位
+- 考取专业认证(相对容易)
+
+** 发现自己的短板
+每个人的知识都存在短板, 长久来看, 消除的短板越多, 长久受益越大
+*** 为什么会有短板
+每个人必然会存在不了解的知识, 而我们本能地倾向于掩盖我们自己的缺陷, 而且我们也总
+是太忙, 忙到没有时间去弥补他们. 结果我们要么无法明白我们真正在做什么, 要么为了
+避开他而采取低效的办法
+*** 找出你的短板
+一般来说你的短板可以再以下几个位置寻找:
+- 重复性工作
+- 花费大量时间的工作
+- 不理解的地方
+- 面试中不会的问题
+最好将自己的短板添加到清单之中, 以便后面进行针对性的学习, 弥补
+*** 消除短板
+消除短板最重要的就是要定位短板, 明确短板, 然后针对性的学习.
+* 生产力
+做该做的工作
+** 一切始于专注力
+专注就是注意力分散的对立面, 还记得你上一次全心全意投入某个事情, 忘记时间流逝的时
+候吗? 那就是专注.
+专注是拥有惯性的, 进入专注很难, 但一旦专注之后就很容易保持. 在专注状态下你的工作
+效率将会极大地提高. 因为人类的思维模式就是如此, 先过花时间过一遍所有事物, 达到
+思维高峰后开始完成任务.
+*** 如何进入专注
+你必须认识到, 专注不是即开即用的, 他有一个暖机的过程. 这个过程中你需要克服将思绪
+集中在单一任务时的那种痛感(除非你完全享受这个任务), 一旦成功进入即可轻松维持. 为
+了做到专注, 你最好想办法将周围的干扰排除, 比如手机静音, 工位上挂上免打扰. 你的目
+标是熬过前15分钟, 熬过之后一般就会进入专注状态
+
