--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -41,13 +41,24 @@ DEADLINE: <2022-02-12 周六 23:00 +1m> SCHEDULED: <2022-02-12 周六 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-01-31 周一 23:00 ++1w> SCHEDULED: <2022-01-29 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                    :event:
+DEADLINE: <2022-02-07 周一 23:00 ++1w> SCHEDULED: <2022-02-05 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-01-22 周六 15:02]
+:LAST_REPEAT: [2022-01-27 周四 16:38]
 :END:
+- State "DONE"       from "TODO"       [2022-01-27 周四 16:38] \\
+  1. 支持任意战斗阵容导出, 测试战斗保存阵容使用同一逻辑
+  2. 处理执行回调未展开导致播放顺序错误的问题
+  3. 处理重复发起战斗导致战斗卡死的问题
+  4. 分析在死亡对象上施法导致卡死的问题
+     - 这个是由于死亡是使用SetVisible(False)来实现的, 而目前蓝图播放器播放关联到隐
+       藏对象的粒子时会卡住, 最后导致战斗卡死
+  ------------------------------------------------
+  1. 甘雨还是有点香
+  2. 弹射峰回路转, 最终还是出光炮了
+  3. 过年回家喽, 好耶
 - State "DONE"       from "TODO"       [2022-01-22 周六 15:02] \\
   1. 受伤和死亡表现优化:
      - 死亡会就地死亡, 不会返回原地
@@ -574,12 +585,28 @@ DEADLINE: <2022-01-31 周一 23:00 ++1w> SCHEDULED: <2022-01-29 周六 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月归档到年度文件                                     :event:
-DEADLINE: <2022-01-30 周日 23:00 ++1m> SCHEDULED: <2022-01-30 周日 09:00 ++1m>
+DEADLINE: <2022-03-02 周三 23:00 ++1m> SCHEDULED: <2022-03-02 周三 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-12-30 周四 20:25]
+:LAST_REPEAT: [2022-01-27 周四 16:46]
 :END:
+- State "DONE"       from "TODO"       [2022-01-27 周四 16:46] \\
+  工作上:
+  1. 研究2D摄像机使用方式并输出摄像机组件
+  2. 本地存储采用localsave
+  3. 支持战士释放技能结束后如果不在原位自动返回原位
+  4. 行动触发顺序改版, 由一次性触发改为分层次触发
+  5. 优化代码里的magic key
+  6. prompt提示信息配置导表
+  7. 优化战斗日志输出, 改为json形式
+  8. 死亡和受伤表现优化, 死亡会停止所有行为并在原地死亡, 受伤只会在闲置或受伤状态下
+     丢失生命时触发
+  9. 支持任意战斗阵容导出(仅支持配置, 角色数值目前无法导出)
+  10. 处理若干导致战斗卡死的问题
+  生活上:
+  1. 学习代码之外
+  2. 弹射把血压拉满了, 差点被气死
 - State "DONE"       from "TODO"       [2021-12-30 周四 20:25] \\
   工作上:
   1. 优化第三版战斗表现, 死亡时不会播放行为
@@ -723,8 +750,6 @@ CLOCK: [2021-12-12 周日 15:02]--[2021-12-12 周日 15:27] =>  0:25
 CLOCK: [2021-12-12 周日 11:06]--[2021-12-12 周日 11:31] =>  0:25
 CLOCK: [2021-12-12 周日 10:28]--[2021-12-12 周日 10:53] =>  0:25
 :END:
-** TODO [#A] 给姥姥姥爷刘浩买点东西?                             :shopping:
-SCHEDULED: <2022-01-23 周日 15:01>
 * Appointment
 ** WAIT 购买xbox精英二代手柄                                     :shopping:
 <2021-11-01 周一 09:00>
@@ -748,19 +773,8 @@ SCHEDULED: <2021-06-12 周六 09:00>
 ** WAIT 爬火炉山                                                     :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
-** TODO 回家过年                                                    :event:
-[2022-01-27 周四 20:20]: 广州南->北京西 动卧
-[2022-01-28 周五 09:59]: 北京朝阳->赤峰 动车
-[2022-02-06 周日 09:31]: 赤峰->北京朝阳 动车
-[2022-02-06 周日 15:30]: 北京大兴->广州 飞机
 ** TODO 和达文西聚餐                                                 :date:
 <2022-01-22 周六 14:53>
 佬麻雀-湘菜馆 科学大道54号
-** Archive                                                        :ARCHIVE:
-*** DONE 接种科兴第三针疫苗                                         :event:
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-01-22 周六 15:06
-:END:
-<2022-01-18 周二 14:30>
 * Project
 * Someday
