--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -277,8 +277,8 @@ SCHEDULED: <2022-01-16 周日 09:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#B] 学习《重构 改善既有代码的设计》                        :learn:
 SCHEDULED: <2022-02-12 周六 09:00 ++1d>
-** TODO [#A] 阅读穷爸爸,富爸爸                                      :learn:
-SCHEDULED: <2021-11-29 周一 09:34>
+** DONE [#A] 阅读穷爸爸,富爸爸                                       :learn:
+CLOSED: [2022-02-08 周二 11:34] SCHEDULED: <2021-11-29 周一 09:34>
 ** TODO [#A] 学习《代码之外的生存指南》                             :learn:
 SCHEDULED: <2021-11-20 周六 +1d>
 :LOGBOOK:
@@ -291,6 +291,8 @@ CLOCK: [2021-12-10 周五 19:57]--[2021-12-10 周五 20:22] =>  0:25
 :END:
 ** TODO [#A] 优化战斗代码, 完善文档                                    :m8:
 SCHEDULED: <2022-01-07 周五 10:28>
+** TODO [#A] 隔离自学                                                  :m8:
+DEADLINE: <2022-02-09 周三 18:00> SCHEDULED: <2022-02-08 周二 13:09>
 * Appointment
 * Project
 ** SCH [#A] 战斗表现学习                                               :m8:
