--- a/src/org/ref/life/软技能.org
+++ b/src/org/ref/life/软技能.org
@@ -432,3 +432,54 @@ cons: 需要多种技能, 风险大, 长时间工作
 了做到专注, 你最好想办法将周围的干扰排除, 比如手机静音, 工位上挂上免打扰. 你的目
 标是熬过前15分钟, 熬过之后一般就会进入专注状态
 
+** 生产力提高计划
+一言以蔽之, 提前做计划并执行. 一般来说会创建以下几种计划
+*** 季度计划
+一年分为四个季度, 每个季度三个月, 这三个月要有一个宏观的大的计划, 以及一些想要在
+这个季度完成的工作
+*** 月度计划
+每个月第一天打印出这个月的月历, 并规划每天要完成的工作。可以将季度计划中的任务分
+配到各个月度计划中
+*** 周计划
+每周一的早晨要规划这一周的工作, 一般使用一些看板工具来组织一周的工作。每天开始工
+作时, 都要浏览一下本周工作的清单, 通过在看板上设置卡片来安排所有任务。对于每个任
+务估算一下完成需要的时间(一般以番茄钟作为单位), 一般假设自己每天可以完成9个番茄钟
+的任务.
+通过这种方式, 在一周的开始你就会知道你这周的时间都去哪里了, 而不是之后.
+*** 日计划及执行
+每天将需要执行的工作卡片准备好, 并按照重要程度依次执行, 如果卡片上的任务还不够细
+致, 必须要添加细节, 明确自己今天到底需要做什么. 如果今天完成的更多, 那么就把明天
+的任务拖到今天. 如果今天的任务无法完成, 那么可能需要将一些卡片移动到下一周
+*** 与干扰作斗争
+干扰是专注的最大杀手, 所以一旦进入工作状态, 一切消息提示静默, 不要浏览任何社交媒
+体以及资讯应用.
+*** 休息
+有些周可以设置为无工作周, 这些周里不会使用番茄钟, 也不会把工作排满, 只做自己喜欢
+的工作. 往往这些周毫无成效, 让你迫不及待的回到正常工作中, 除了休息之外还能够提醒
+你按照计划工作是多么的高效
+每个几个月可以放2周-1月的长假, 长假期间任务挂起, 只做最少量的工作
+
+** 番茄工作法
+*** 番茄工作法概述
+规划出一天打算完成的工作, 然后设置一个时长25分钟的定时器. 在这25分钟内, 只专注一
+个任务, 心无旁骛. 一旦有干扰, 一定要用各种办法屏蔽干扰.
+在25分钟结束的的时候, 设置一个5分钟的定时器用来休息. 每4个番茄钟之后, 休息15分钟
+如果提前完成任务, 你可以选择继续对已完成的工作进行改进, 或者直接跳到下一个工作任
+物.
+*** 有效利用番茄工作法
+使用番茄钟时必须严格跟踪每天的使用个数. 通过统计每天的个数, 可以有效评估每天个人
+的工作能力. 对自己每天能够完成的工作也会有一个清晰地认知. 最后可以根据自己的工作
+能力设置合适的工作量.
+通过番茄工作法, 你可以把每周看做是由有限个番茄钟构成的. 通过计算自己每周完成的番
+茄钟数量, 可以确切的得知自己完成了多少任务. 也不会觉得自己没有完成足够的任务.
+*** 心理学
+人总会为自己没有做更多的事情感到内疚. 这与你一天完成了多少工作无关. 就好像人永远
+无法放松一样. 以致于在玩最喜欢的游戏时都充满了负罪感, 觉得自己在浪费时间.
+这个问题的根源在于, 你无法准确评估你每天能够完成多少任务, 也没有为自己每天完成的
+任务设置一个准确的目标. 但通过番茄钟, 你可以准确地评估你每天能够完成多少任务. 当
+你完成足够个数的番茄钟时. 你会告诉你自己, 你今天已经足够努力了. 所以记下来即便玩
+游戏. 你也能够毫无心理负担的玩下去.
+*** 每天的工作上限
+人每天能够专注的时间是有限的, 所以你每天能够完成的番茄钟也是有限的. 不要以为10个
+小时就可以完成20个番茄钟, 实际上10个可能才是合理的值. 所以一周一般可以设置50个番
+茄钟, 如果你完成了, 你可以告诉你自己, 这周你很努力了.
