--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -4,19 +4,24 @@
 #+LANGUAGE: zh-Cn
 #+TAGS: { Live : date(d) event(e) shopping(s) }
 #+TAGS: { State : future(f) }
-#+TODO: TODO(t) SCH(s) WAIT(w@) | DONE(d) CANCELED(c@)
+#+TODO: TODO(t) SCH(s) WAIT(w@) DOING(i) | DONE(d) CANCELED(c@)
 #+COLUMNS: %25ITEM %TODO %17Effort(Estimated Effort){:} %CLOCKSUM
-#+PROPERTY: EffORT_ALL 0 0:15 0:30 1:00 2:00 4:00 8:00
+#+PROPERTY: EffORT_ALL 0 0:25 0:50 1:15 1:40 2:05 2:30 2:55 3:20
 #+OPTIONS: tex:t
 
 
 * Inbox
 * Next Action
-** TODO [#A] 大壮名城G1-1018租房月志                                 :event:
-DEADLINE: <2022-02-12 周六 23:00 +1m> SCHEDULED: <2022-02-12 周六 09:00 +1m>
+** TODO [#A] 月度财务收支                                           :event:
+DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
 :PROPERTIES:
 :LOGGING: DONE(@)
 :END:
+- State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
+  | date         | purpose    | value |
+  |--------------+------------+-------|
+  | [2022-02-10] | taxi       |   -22 |
+  | [2022-02-12] | house rent | -2000 |
 - State "DONE"       from "TODO"       [2022-01-12 周四 20:44] \\
   1. 房租2000, 电费80(空调+电脑), 物业+水117, 网费100
 - State "DONE"       from "TODO"       [2021-12-12 周日 10:26] \\
@@ -710,8 +715,6 @@ DEADLINE: <2022-03-02 周三 23:00 ++1m> SCHEDULED: <2022-03-02 周三 09:00 ++1
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** TODO [#A] 整理基金知识                                           :event:
-SCHEDULED: <2021-12-08 周三 00:00>
 ** TODO [#A] 学习晨星网投资教程并记录                               :event:
 SCHEDULED: <2021-12-08 周三 16:12 +1d>
 :PROPERTIES:
@@ -721,17 +724,17 @@ SCHEDULED: <2021-12-08 周三 16:12 +1d>
 :END:
 - State "DONE"       from "TODO"       [2021-12-08 周三 13:23] \\
   [[file:../ref/morningstar/featured/保持投资.org][保持投资]]
-** TODO [#A] 整理财务情况, 设计投资计划                             :event:
-SCHEDULED: <2021-12-20 周一 19:59 +1m>
+** WAIT [#A] 整理财务情况, 设计投资计划                             :event:
 :PROPERTIES:
 :STYLE:    habit
+:BLOCKER:  olp("live.org" "Next Action/学习晨星网投资教程并记录")
 :LOGGING: logrepeat DONE(@)
 :END:
-** TODO [#A] 自学unity                                               :event:
-SCHEDULED: <2022-01-23 周日 09:00 +1w>
+** WAIT [#A] 自学unity                                              :event:
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
+:BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
 - State "DONE"       from "TODO"       [2022-01-22 周六 15:07]
@@ -751,30 +754,5 @@ CLOCK: [2021-12-12 周日 11:06]--[2021-12-12 周日 11:31] =>  0:25
 CLOCK: [2021-12-12 周日 10:28]--[2021-12-12 周日 10:53] =>  0:25
 :END:
 * Appointment
-** WAIT 购买xbox精英二代手柄                                     :shopping:
-<2021-11-01 周一 09:00>
-注意手柄的A键不灵敏, 回弹慢, 连续点击后断触问题
-** WAIT 手机号码切换                                                :event:
-SCHEDULED: <2021-06-12 周六 09:00>
-- State "WAIT"       from "TODO"       [2021-07-05 周一 09:05] \\
-  懒得搞了
-- [ ] 切换手机号绑定(18516114761\rightarrow19128277021 [0%]
-  - [ ] 微信
-  - [ ] 支付宝
-  - [ ] 京东
-  - [ ] 天猫
-  - [ ] 淘宝
-  - [ ] 招商银行(营业厅办理)
-  - [ ] 火星
-  - [ ] Apple
-  - [ ] QQ
-  - [ ] Steam
-- [ ] 联通手机号停机
-** WAIT 爬火炉山                                                     :event:
-- State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
-  和同事商量一下一起去, 先不急.
-** TODO 和达文西聚餐                                                 :date:
-<2022-01-22 周六 14:53>
-佬麻雀-湘菜馆 科学大道54号
 * Project
 * Someday
