--- a/src/org/ref/life/软技能.org
+++ b/src/org/ref/life/软技能.org
@@ -483,3 +483,26 @@ cons: 需要多种技能, 风险大, 长时间工作
 人每天能够专注的时间是有限的, 所以你每天能够完成的番茄钟也是有限的. 不要以为10个
 小时就可以完成20个番茄钟, 实际上10个可能才是合理的值. 所以一周一般可以设置50个番
 茄钟, 如果你完成了, 你可以告诉你自己, 这周你很努力了.
+
+** 定额工作法
+*** 定额工作法规则
+- 挑选一项重复性的任务
+- 明确有效时限, 在此期间内任务重复执行
+- 明确在有效时限内, 需要完成此任务几次
+- 给自己承诺, 一定要完成额度
+- 调整, 如果额度过高, 在下个周期调低, 反之亦然, 但是不能在有效时间内调整
+
+一旦设定了定额, 就一定要完成承诺, 一旦失信, 整个定额工作法就会分崩离析
+  
+一些定额示例:
+- 每周跑步三次
+- 每周写一篇博客
+- 每周完成50个番茄钟的工作
+*** 定额工作法的原理
+我们大多数人在长期高生产效率工作时都会面临一个问题, 那就是如何始终如一的保持节奏.
+随着时间推移, 只要每天都确保任务落实到位, 小砖头总会砌成高墙. 只关注高墙只会让人
+泄气. 关键是要找到一个办法保证自己每天, 每周, 每月都在砌砖.
+定额工作法可以帮你克服意志力薄弱的问题, 通过预先设定好必须完成的流程, 消除需要做
+决策的部分, 你就不需要在判断是否要做某事 :), 因为你必须要做. 因为每次做出决策都
+要消耗你仅存的有限的意志力, 定额工作法让你无需再做决策, 自然也就避免了消耗意志力
+的问题.
