--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -276,7 +276,7 @@ SCHEDULED: <2022-01-16 周日 09:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#B] 学习《重构 改善既有代码的设计》                        :learn:
-SCHEDULED: <2022-02-12 周六 09:00 ++1d>
+SCHEDULED: <2022-03-01 周二 09:00 ++1d>
 ** DONE [#A] 阅读穷爸爸,富爸爸                                       :learn:
 CLOSED: [2022-02-08 周二 11:34] SCHEDULED: <2021-11-29 周一 09:34>
 :LOGBOOK:
@@ -317,6 +317,58 @@ CLOSED: [2021-11-01 周一 14:11] SCHEDULED: <2021-10-19 周二 20:46>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+** SCH [#A] 实现战斗日志浏览器                                         :m8:
+SCHEDULED: <2022-02-11 周五 09:18> DEADLINE: <2022-03-04 周五 09:19>
+:PROPERTIES:
+:BLOCKER: children
+:END:                          
+*** DONE 构思需求, 总结浏览器需要的功能
+CLOSED: [2022-02-11 周五 10:11] SCHEDULED: <2022-02-11 周五 09:30>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:Effort:   0:25
+:END:                          
+:LOGBOOK:
+CLOCK: [2022-02-11 周五 10:11]--[2022-02-11 周五 10:36] =>  0:25
+:END:
+*** DONE 设计界面
+CLOSED: [2022-02-11 周五 11:33] SCHEDULED: <2022-02-11 周五 10:11>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:Effort:   0:50
+:END:
+:LOGBOOK:
+CLOCK: [2022-02-11 周五 10:47]--[2022-02-11 周五 11:12] =>  0:25
+CLOCK: [2022-02-11 周五 10:17]--[2022-02-11 周五 10:42] =>  0:25
+:END:
+*** DONE 设计界面原型
+CLOSED: [2022-02-12 周六 14:54] SCHEDULED: <2022-02-11 周五 13:15>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:Effort:   1:40
+:END:
+:LOGBOOK:
+CLOCK: [2022-02-12 周六 13:51]--[2022-02-12 周六 14:16] =>  0:25
+CLOCK: [2022-02-12 周六 13:16]--[2022-02-12 周六 13:41] =>  0:25
+CLOCK: [2022-02-12 周六 11:09]--[2022-02-12 周六 11:34] =>  0:25
+CLOCK: [2022-02-12 周六 10:39]--[2022-02-12 周六 11:04] =>  0:25
+CLOCK: [2022-02-11 周五 15:50]--[2022-02-11 周五 16:15] =>  0:25
+CLOCK: [2022-02-11 周五 15:20]--[2022-02-11 周五 15:45] =>  0:25
+CLOCK: [2022-02-11 周五 14:50]--[2022-02-11 周五 15:15] =>  0:25
+CLOCK: [2022-02-11 周五 14:20]--[2022-02-11 周五 14:45] =>  0:25
+CLOCK: [2022-02-11 周五 13:45]--[2022-02-11 周五 14:10] =>  0:25
+CLOCK: [2022-02-11 周五 13:15]--[2022-02-11 周五 13:40] =>  0:25
+:END:
+*** TODO 设计数据结构
+SCHEDULED: <2022-02-12 周六 14:54>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** WAIT 实现
+*** WAIT 测试
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
 :END:
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
