--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -18,12 +18,17 @@ DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
 :LOGGING: DONE(@)
 :END:
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
-  | date         | purpose       | value |
-  |--------------+---------------+-------|
-  | [2022-02-10] | taxi          |   -22 |
-  | [2022-02-10] | buy fruit     |   -15 |
-  | [2022-02-12] | house rent    | -2000 |
-  | [2022-02-12] | wf month card |   -50 |
+  | date         | purpose       |   value |
+  |--------------+---------------+---------|
+  | [2022-02-10] | taxi          |     -22 |
+  | [2022-02-10] | buy fruit     |     -15 |
+  | [2022-02-12] | house rent    |   -2000 |
+  | [2022-02-12] | wf month card |     -50 |
+  | [2022-02-12] | takeout       |   -42.4 |
+  | [2022-02-13] | takeout       |   -24.9 |
+  | [2022-02-13] | takeout       |     -53 |
+  |              |               | -2207.3 |
+#+TBLFM: @9$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2022-01-12 周四 20:44] \\
   1. 房租2000, 电费80(空调+电脑), 物业+水117, 网费100
 - State "DONE"       from "TODO"       [2021-12-12 周日 10:26] \\
