[org]update note

--- a/src/org/ref/life/软技能.org
+++ b/src/org/ref/life/软技能.org
@@ -506,3 +506,71 @@ cons: 需要多种技能, 风险大, 长时间工作
 决策的部分, 你就不需要在判断是否要做某事 :), 因为你必须要做. 因为每次做出决策都
 要消耗你仅存的有限的意志力, 定额工作法让你无需再做决策, 自然也就避免了消耗意志力
 的问题.
+
+** 对自己负责
+让人们完成工作的两大动机, 内部动机(责任)和外部动机(奖惩), 内部动机的驱动力
+远远大于外部
+*** 责任感
+培养出自我责任感非常之重要, 如果没有这种责任感, 你将永远屈从于外部的动力
+工作. 你容易被一根胡萝卜折服, 也容易屈从于大棒.
+所以在大脑尚未被蒙蔽的时候, 你要设定一系列规则. 让自己直到什么是不该做的,
+什么是应该做的.
+*** 外部问责
+可以加入一个小组, 组员定期公开自己的设定目标以及完成进度, 又或者将自己的
+工作公开到网络上. 那种尴尬或者让信赖自己的人失望会激励你采取行动. 最重要的
+是确保自己对自己对行为带有某种责任感, 这会让你的效率大幅提升
+
+** 多任务并行
+*** 为什么并行不好
+因为人只有在专注的时候效率最高. 而大脑是不具有同时专注于两个事务的能力的. 一般意
+义上的多任务只是在不同的任务之间来回切换罢了. 每次切换你都要重新进入专注状态. 这
+会极大的影响你的工作效率.
+*** 批处理
+所以一般不要并行处理, 而是批处理, 将具有相似性的任务排到一起, 按顺序轮流执行. 比
+如统一一个时间段修bug, 一个时间段处理邮件, 一个时间段打电话. 这种任务单个一般没法
+让你进入专注状态. 但是批处理时延长了时间. 可以让你进入专注状态(:
+*** 什么样的任务可以并行
+即一个占用注意力和不占用注意力的任务. 这种情况下确实达到了二倍的效率. 因为虽然你
+同时执行两个任务. 但只有一个需要用脑. 这个时候你既能专注, 也达到了双倍效率.
+- 听歌+写作
+- 健身+听书
+
+** 职业倦怠
+*** 什么是倦怠
+作为人类, 我们总是对刚刚开始的事物兴奋不已, 动机和兴趣都处在高点. 工效极高. 成果
+满满, 但随着时间的推移, 你会觉得越来越提不起兴致. 动机和兴趣都已经消失殆尽, 工效
+降低, 毫无产出.
+这是很正常的现象. 开始越是兴奋. 到达倦怠的临界点就会越快. 事实上你不过时撞到了一
+个墙. 所有人都会面临这个情况
+*** 克服倦怠
+首先必须要知道, 一旦如果你能穿越这个墙, 你的动机和兴趣会重新提高, 工效也会再次提
+升并且以后都是上涨趋势, 你将会收获极大丰厚的成果; 其次单凭自己的意志力是很难穿过
+这堵墙的, 所以需要一些方法来强制自己穿过这堵墙. 比如写书时设定规则, 每天必须完成
+一章. 通过严格执行计划, 能够有效的帮助你克服倦怠.
+
+** 时间是怎样被浪费的
+注意: 如果你乐在其中而不是为了逃避工作, 那这种就不算浪费时间
+*** 典型例子
+- 看电视。
+- 社交媒体
+- 新闻网站
+- 不必要的会议
+- 烹饪
+- 玩电子游戏（尤其是网络游戏）
+- 工间喝咖啡休息
+*** 如何处理
+最好使用一些工具来记录你每天的时间都去哪里了. 然后根据数据来进行相应的处理. 即找
+浪费的点, 然后消除它
+
+
+** 形成惯例的重要性
+生产力的真正秘诀在于, 长期做一件小事. 正是我们每天行为的日积月累, 可以让我们生活
+的每一个方面都得到提升
+*** 创建一个惯例
+决定好一个大的目标, 然后将其分解为每天可以做的一个小任务, 然后每天坚持做下去, 形
+成惯例. 每天写1000字, 一年也有36w字
+甚至可以具体细化到每天每个时间段的具体安排上, 比如8点健身, 9点学习技术, 10点工作
+等等
+*** 不要过于沉迷于惯例
+要注意是生活中总是会有意外发生, 所以惯例的安排要具有一定的灵活性, 你需要从容面对
+意外
