--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -18,17 +18,23 @@ DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
 :LOGGING: DONE(@)
 :END:
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
-  | date         | purpose       |   value |
-  |--------------+---------------+---------|
-  | [2022-02-10] | commute       |     -22 |
-  | [2022-02-10] | shopping      |     -15 |
-  | [2022-02-12] | house rent    |   -2000 |
-  | [2022-02-12] | wf month card |     -50 |
-  | [2022-02-12] | takeout       |   -42.4 |
-  | [2022-02-13] | takeout       |   -24.9 |
-  | [2022-02-13] | takeout       |     -53 |
-  |              |               | -2207.3 |
-#+TBLFM: @9$3=vsum(@2$3..@-1$3)
+  | date         | purpose       |    value |
+  |--------------+---------------+----------|
+  | [2022-02-10] | commute       |      -22 |
+  | [2022-02-10] | shopping      |      -15 |
+  | [2022-02-12] | house rent    |    -2000 |
+  | [2022-02-12] | wf month card |      -50 |
+  | [2022-02-12] | takeout       |    -42.4 |
+  | [2022-02-13] | takeout       |    -24.9 |
+  | [2022-02-13] | takeout       |      -53 |
+  | [2022-02-16] | shopping      |    -10.4 |
+  | [2022-02-17] | shopping      |     -2.5 |
+  | [2022-02-18] | shopping      |     -3.4 |
+  | [2022-02-18] | commute       |      -18 |
+  | [2022-02-18] | shopping      |    -12.5 |
+  | [2022-02-19] | commute       |   -19.16 |
+  |              |               | -2273.26 |
+#+TBLFM: @15$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
   2. 额外疏通水池下水管道50
@@ -40,12 +46,22 @@ DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-02-21 周一 23:00 ++1w> SCHEDULED: <2022-02-18 周五 18:00 ++1w>
+DEADLINE: <2022-02-28 周一 23:00 ++1w> SCHEDULED: <2022-02-25 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-02-14 周一 09:32]
+:LAST_REPEAT: [2022-02-19 周六 15:38]
 :END:
+- State "DONE"       from "TODO"       [2022-02-19 周六 15:38] \\
+  1. 优化战斗退出
+     - 战斗中退出, 重开都会给服务端发送新的协议
+     - 战斗结算流程修改, 目前战斗表现和战斗结算是两个部分. 表现结束后客户端主动给服
+       务端发送协议来进入结算阶段
+  2. 不上阵英雄无法开始战斗
+  3. 实现战斗日志浏览器
+     - model层实现
+     - 界面层实现
+  ------------------------------------------------
 - State "DONE"       from "TODO"       [2022-02-14 周一 09:32] \\
   1. 前三天在家隔离, 用两天的时间学习了spine动画的基础概念
   2. 设计战斗日志浏览器:
@@ -716,7 +732,7 @@ DEADLINE: <2022-03-02 周三 23:00 ++1m> SCHEDULED: <2022-03-02 周三 09:00 ++1
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
 ** TODO [#A] 每周学习晨星网投资教程一篇 [0/1]                       :event:
-SCHEDULED: <2021-12-08 周三 16:12 +1d>
+DEADLINE: <2022-02-20 周日 23:59 +1w> SCHEDULED: <2022-02-15 周二 09:00 +1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
