--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,11 +14,12 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-02-19 周六 18:00 ++1w> DEADLINE: <2022-02-21 周一 12:00 ++1w>
+SCHEDULED: <2022-02-26 周六 18:00 ++1w> DEADLINE: <2022-02-28 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-02-14 周一 09:45]
+:LAST_REPEAT: [2022-02-19 周六 15:46]
 :END:
+- State "DONE"       from "TODO"       [2022-02-19 周六 15:46]
 - State "DONE"       from "TODO"       [2022-02-14 周一 09:45]
 - State "DONE"       from "TODO"       [2022-01-27 周四 16:42]
 - State "DONE"       from "TODO"       [2022-01-22 周六 15:07]
@@ -81,13 +82,31 @@ SCHEDULED: <2022-02-21 周一 09:00 ++1w>
   答案是n-1场, 因为最后只有一个队伍获胜
 - [X] 完成一道题
 ** TODO [#A] 每周学习《代码之外的生存指南》5篇 [0/5]                :learn:
-SCHEDULED: <2021-11-20 周六 +1d>
+SCHEDULED: <2022-02-21 周一 +1d>
+:PROPERTIES:
+:LAST_REPEAT: [2022-02-19 周六 17:09]
+:END:
+- State "DONE"       from "TODO"       [2022-02-19 周六 17:09]
 - [ ] 第一篇
 - [ ] 第二篇
 - [ ] 第三篇
 - [ ] 第四篇
 - [ ] 第五篇
 
+** TODO [#A] 每周40个番茄钟 [0/5]                                    :work:
+DEADLINE: <2022-02-25 周五 09:00 +1w> SCHEDULED: <2022-02-21 周一 09:00 +1w>
+:PROPERTIES:
+:LAST_REPEAT: [2022-02-19 周六 13:44]
+:END:
+- State "DONE"       from "TODO"       [2022-02-19 周六 13:44] \\
+  52钟
+:LOGBOOK:
+:END:
+- [ ] 
+- [ ] 
+- [ ] 
+- [ ] 
+- [ ] 
 ** WAIT [#B] 学习《重构 改善既有代码的设计》                        :learn:
 :PROPERTIES:
 :BLOCKER:  olp("work.org" "Next Action/每周学习《代码之外的生存指南》5篇")
@@ -106,50 +125,81 @@ CLOSED: [2022-02-10 周四 14:27] DEADLINE: <2022-02-09 周三 18:00> SCHEDULED:
 :PROPERTIES:
 :ARCHIVE_TIME: 2022-02-14 周一 09:30
 :END:
-** TODO [#A] 每周40个番茄钟 [2/5]                                    :work:
-DEADLINE: <2022-02-18 周五 09:00> SCHEDULED: <2022-02-14 周一 09:00>
-- [X] 8钟
-- [X] 10钟
-- [ ] 8钟
-- [ ] 8钟
-- [ ] 8钟
-** DONE [#A] 优化战斗退出                                              :m8:
+*** DONE [#A] 优化战斗退出                                             :m8:
 CLOSED: [2022-02-15 周二 10:44] SCHEDULED: <2022-02-15 周二 09:00>
 :PROPERTIES:
 :Effort:   0:50
+:ARCHIVE_TIME: 2022-02-19 周六 15:46
 :END:
 :LOGBOOK:
+CLOCK: [2022-02-17 周四 11:17]--[2022-02-17 周四 11:42] =>  0:25
+CLOCK: [2022-02-17 周四 10:47]--[2022-02-17 周四 11:12] =>  0:25
+CLOCK: [2022-02-17 周四 10:17]--[2022-02-17 周四 10:42] =>  0:25
 CLOCK: [2022-02-15 周二 10:16]--[2022-02-15 周二 10:41] =>  0:25
 CLOCK: [2022-02-15 周二 09:46]--[2022-02-15 周二 10:11] =>  0:25
 :END:
+*** DONE [#A] 不上阵英雄无法开始战斗                                   :m8:
+CLOSED: [2022-02-17 周四 14:17] SCHEDULED: <2022-02-17 周四 13:15>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-02-19 周六 15:46
+:END:
+:LOGBOOK:
+CLOCK: [2022-02-17 周四 13:35]--[2022-02-17 周四 14:00] =>  0:25
+:END:
 * Appointment
 * Project
-** SCH [#A] 战斗表现学习                                               :m8:
-SCHEDULED: <2021-10-15 周五 09:00> DEADLINE: <2021-10-23 周六 18:00>
+** SCH [#A] 优化状态显示                                               :m8:
+SCHEDULED: <2022-02-21 周一 09:00> DEADLINE: <2022-02-24 周四 21:00>
 :PROPERTIES:
 :BLOCKER: children
 :END:                          
-*** DONE 法术编辑器, 动画编辑器的使用方法
+*** TODO 支持gm切换部分状态显示
+SCHEDULED: <2022-02-21 周一 11:00>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:Effort:   3:20
+:END:                          
+*** WAIT 新增状态信息栏
+:PROPERTIES:
+:Effort:   6:40
+:END:
+*** WAIT 测试
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:Effort:   3:20
+:END:
+** Archive                                                        :ARCHIVE:
+*** DONE [#A] 战斗表现学习                                             :m8:
+CLOSED: [2022-02-19 周六 13:42] SCHEDULED: <2021-10-15 周五 09:00> DEADLINE: <2021-10-23 周六 18:00>
+:PROPERTIES:
+:BLOCKER: children
+:ARCHIVE_TIME: 2022-02-19 周六 15:46
+:END:                          
+**** DONE 法术编辑器, 动画编辑器的使用方法
 CLOSED: [2021-10-19 周二 20:46] SCHEDULED: <2021-10-15 周五 17:00>
 :PROPERTIES:                          
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:                          
-*** DONE 导表定义技能方式和其表现逻辑
+**** DONE 导表定义技能方式和其表现逻辑
 CLOSED: [2021-11-01 周一 14:11] SCHEDULED: <2021-10-19 周二 20:46>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-*** TODO spine动画
+**** DONE spine动画
+CLOSED: [2022-02-19 周六 13:42] DEADLINE: <2022-02-09 周三> SCHEDULED: <2022-02-08 周二>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-** SCH [#A] 实现战斗日志浏览器                                         :m8:
-SCHEDULED: <2022-02-11 周五 09:18> DEADLINE: <2022-03-04 周五 09:19>
+- Note taken on [2022-02-19 周六 13:42] \\
+  [[file:../ref/duoyi/spine动画基础.org][spine动画基础]]
+*** DONE [#A] 实现战斗日志浏览器                                       :m8:
+CLOSED: [2022-02-19 周六 13:44] SCHEDULED: <2022-02-11 周五 09:18> DEADLINE: <2022-03-04 周五 09:19>
 :PROPERTIES:
 :BLOCKER: children
+:ARCHIVE_TIME: 2022-02-19 周六 15:46
 :END:                          
-*** DONE 构思需求, 总结浏览器需要的功能
+**** DONE 构思需求, 总结浏览器需要的功能
 CLOSED: [2022-02-11 周五 10:11] SCHEDULED: <2022-02-11 周五 09:30>
 :PROPERTIES:                          
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
@@ -158,7 +208,7 @@ CLOSED: [2022-02-11 周五 10:11] SCHEDULED: <2022-02-11 周五 09:30>
 :LOGBOOK:
 CLOCK: [2022-02-11 周五 10:11]--[2022-02-11 周五 10:36] =>  0:25
 :END:
-*** DONE 设计界面
+**** DONE 设计界面
 CLOSED: [2022-02-11 周五 11:33] SCHEDULED: <2022-02-11 周五 10:11>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
@@ -168,7 +218,7 @@ CLOSED: [2022-02-11 周五 11:33] SCHEDULED: <2022-02-11 周五 10:11>
 CLOCK: [2022-02-11 周五 10:47]--[2022-02-11 周五 11:12] =>  0:25
 CLOCK: [2022-02-11 周五 10:17]--[2022-02-11 周五 10:42] =>  0:25
 :END:
-*** DONE 设计界面原型
+**** DONE 设计界面原型
 CLOSED: [2022-02-12 周六 14:54] SCHEDULED: <2022-02-11 周五 13:15>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
@@ -186,7 +236,7 @@ CLOCK: [2022-02-11 周五 14:20]--[2022-02-11 周五 14:45] =>  0:25
 CLOCK: [2022-02-11 周五 13:45]--[2022-02-11 周五 14:10] =>  0:25
 CLOCK: [2022-02-11 周五 13:15]--[2022-02-11 周五 13:40] =>  0:25
 :END:
-*** DONE 设计数据结构
+**** DONE 设计数据结构
 CLOSED: [2022-02-14 周一 14:19] SCHEDULED: <2022-02-12 周六 14:54>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
@@ -197,7 +247,7 @@ CLOCK: [2022-02-14 周一 13:38]--[2022-02-14 周一 14:03] =>  0:25
 CLOCK: [2022-02-14 周一 11:17]--[2022-02-14 周一 11:42] =>  0:25
 CLOCK: [2022-02-14 周一 10:47]--[2022-02-14 周一 11:12] =>  0:25
 :END:
-*** DONE 实现数据层
+**** DONE 实现数据层
 CLOSED: [2022-02-15 周二 14:04] SCHEDULED: <2022-02-14 周一 14:19>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
@@ -213,22 +263,59 @@ CLOCK: [2022-02-14 周一 15:49]--[2022-02-14 周一 16:15] =>  0:26
 CLOCK: [2022-02-14 周一 14:55]--[2022-02-14 周一 15:20] =>  0:25
 CLOCK: [2022-02-14 周一 14:25]--[2022-02-14 周一 14:50] =>  0:25
 :END:
-*** TODO 实现界面层
-SCHEDULED: <2022-02-15 周二 14:04>
+**** DONE 实现界面层
+CLOSED: [2022-02-19 周六 13:41] SCHEDULED: <2022-02-15 周二 14:04>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :Effort:   6:40
 :END:
+- Note taken on [2022-02-16 周三 19:39] \\
+  优化:
+  1. +滚动框自动定位到高亮元素所在区间+
+  2. +最后一个浏览框如果没有子节点信息就显示详细信息+
+  3. +自动保存浏览模式+
 :LOGBOOK:
+CLOCK: [2022-02-18 周五 20:37]--[2022-02-18 周五 21:02] =>  0:25
+CLOCK: [2022-02-18 周五 20:02]--[2022-02-18 周五 20:27] =>  0:25
+CLOCK: [2022-02-18 周五 19:32]--[2022-02-18 周五 19:57] =>  0:25
+CLOCK: [2022-02-18 周五 19:02]--[2022-02-18 周五 19:27] =>  0:25
+CLOCK: [2022-02-18 周五 17:22]--[2022-02-18 周五 17:47] =>  0:25
+CLOCK: [2022-02-18 周五 16:52]--[2022-02-18 周五 17:17] =>  0:25
+CLOCK: [2022-02-18 周五 16:21]--[2022-02-18 周五 16:47] =>  0:26
+CLOCK: [2022-02-18 周五 15:31]--[2022-02-18 周五 15:56] =>  0:25
+CLOCK: [2022-02-18 周五 14:56]--[2022-02-18 周五 15:21] =>  0:25
+CLOCK: [2022-02-18 周五 13:47]--[2022-02-18 周五 14:12] =>  0:25
+CLOCK: [2022-02-18 周五 13:17]--[2022-02-18 周五 13:42] =>  0:25
+CLOCK: [2022-02-18 周五 11:17]--[2022-02-18 周五 11:42] =>  0:25
+CLOCK: [2022-02-18 周五 10:21]--[2022-02-18 周五 10:46] =>  0:25
+CLOCK: [2022-02-18 周五 09:51]--[2022-02-18 周五 10:16] =>  0:25
+CLOCK: [2022-02-17 周四 19:58]--[2022-02-17 周四 20:23] =>  0:25
+CLOCK: [2022-02-17 周四 19:28]--[2022-02-17 周四 19:53] =>  0:25
+CLOCK: [2022-02-17 周四 15:21]--[2022-02-17 周四 15:46] =>  0:25
+CLOCK: [2022-02-17 周四 14:51]--[2022-02-17 周四 15:16] =>  0:25
+CLOCK: [2022-02-17 周四 14:21]--[2022-02-17 周四 14:46] =>  0:25
+CLOCK: [2022-02-17 周四 13:04]--[2022-02-17 周四 13:29] =>  0:25
+CLOCK: [2022-02-16 周三 19:07]--[2022-02-16 周三 19:32] =>  0:25
+CLOCK: [2022-02-16 周三 15:46]--[2022-02-16 周三 16:11] =>  0:25
+CLOCK: [2022-02-16 周三 14:50]--[2022-02-16 周三 15:15] =>  0:25
+CLOCK: [2022-02-16 周三 14:20]--[2022-02-16 周三 14:45] =>  0:25
+CLOCK: [2022-02-16 周三 13:37]--[2022-02-16 周三 14:02] =>  0:25
+CLOCK: [2022-02-16 周三 13:07]--[2022-02-16 周三 13:32] =>  0:25
+CLOCK: [2022-02-16 周三 10:55]--[2022-02-16 周三 11:20] =>  0:25
+CLOCK: [2022-02-16 周三 10:25]--[2022-02-16 周三 10:50] =>  0:25
+CLOCK: [2022-02-16 周三 09:37]--[2022-02-16 周三 10:02] =>  0:25
+CLOCK: [2022-02-16 周三 09:07]--[2022-02-16 周三 09:32] =>  0:25
 CLOCK: [2022-02-15 周二 20:16]--[2022-02-15 周二 20:41] =>  0:25
 CLOCK: [2022-02-15 周二 19:45]--[2022-02-15 周二 20:10] =>  0:25
 CLOCK: [2022-02-15 周二 15:01]--[2022-02-15 周二 15:26] =>  0:25
 CLOCK: [2022-02-15 周二 14:31]--[2022-02-15 周二 14:56] =>  0:25
 CLOCK: [2022-02-15 周二 13:39]--[2022-02-15 周二 14:04] =>  0:25
 :END:
-*** WAIT 测试
+**** DONE 测试
+CLOSED: [2022-02-19 周六 13:44] SCHEDULED: <2022-02-19 周六 13:41>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
