--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -18,23 +18,27 @@ DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
 :LOGGING: DONE(@)
 :END:
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
-  | date         | purpose       |    value |
-  |--------------+---------------+----------|
-  | [2022-02-10] | commute       |      -22 |
-  | [2022-02-10] | shopping      |      -15 |
-  | [2022-02-12] | house rent    |    -2000 |
-  | [2022-02-12] | wf month card |      -50 |
-  | [2022-02-12] | takeout       |    -42.4 |
-  | [2022-02-13] | takeout       |    -24.9 |
-  | [2022-02-13] | takeout       |      -53 |
-  | [2022-02-16] | shopping      |    -10.4 |
-  | [2022-02-17] | shopping      |     -2.5 |
-  | [2022-02-18] | shopping      |     -3.4 |
-  | [2022-02-18] | commute       |      -18 |
-  | [2022-02-18] | shopping      |    -12.5 |
-  | [2022-02-19] | commute       |   -19.16 |
-  |              |               | -2273.26 |
-#+TBLFM: @15$3=vsum(@2$3..@-1$3)
+| date         | purpose       |    value |
+|--------------+---------------+----------|
+| [2022-02-10] | commute       |      -22 |
+| [2022-02-10] | shopping      |      -15 |
+| [2022-02-12] | house rent    |    -2000 |
+| [2022-02-12] | wf month card |      -50 |
+| [2022-02-12] | takeout       |    -42.4 |
+| [2022-02-13] | takeout       |    -24.9 |
+| [2022-02-13] | takeout       |      -53 |
+| [2022-02-16] | shopping      |    -10.4 |
+| [2022-02-17] | shopping      |     -2.5 |
+| [2022-02-18] | shopping      |     -3.4 |
+| [2022-02-18] | commute       |      -18 |
+| [2022-02-18] | shopping      |    -12.5 |
+| [2022-02-19] | commute       |   -19.16 |
+| [2022-02-20] | buy game      |      -15 |
+| [2022-02-20] | energy bill   |      -50 |
+| [2022-02-20] | takeout       |      -36 |
+| [2022-02-20] | takeout       |      -45 |
+|              |               | -2419.26 |
+#+TBLFM: @19$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
   2. 额外疏通水池下水管道50
@@ -732,15 +736,13 @@ DEADLINE: <2022-03-02 周三 23:00 ++1m> SCHEDULED: <2022-03-02 周三 09:00 ++1
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
 ** TODO [#A] 每周学习晨星网投资教程一篇 [0/1]                       :event:
-DEADLINE: <2022-02-20 周日 23:59 +1w> SCHEDULED: <2022-02-15 周二 09:00 +1w>
+DEADLINE: <2022-02-27 周日 23:59 +1w> SCHEDULED: <2022-02-21 周一 09:00 +1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-12-08 周三 13:23]
+:LAST_REPEAT: [2022-02-21 周一 01:38]
 :END:
 - [ ] 第一篇
-- State "DONE"       from "TODO"       [2021-12-08 周三 13:23] \\
-  [[file:../ref/morningstar/featured/保持投资.org][保持投资]]
 ** WAIT [#A] 整理财务情况, 设计投资计划                             :event:
 :PROPERTIES:
 :STYLE:    habit
