[org]update note

--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -13,12 +13,13 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-02-26 周六 18:00 ++1w> DEADLINE: <2022-02-28 周一 12:00 ++1w>
+** TODO [#A] 完成每周周报                                             :work:
+SCHEDULED: <2022-03-05 周六 18:00 ++1w> DEADLINE: <2022-03-07 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-02-19 周六 15:46]
+:LAST_REPEAT: [2022-02-26 周六 16:40]
 :END:
+- State "DONE"       from "TODO"       [2022-02-26 周六 16:40]
 - State "DONE"       from "TODO"       [2022-02-19 周六 15:46]
 - State "DONE"       from "TODO"       [2022-02-14 周一 09:45]
 - State "DONE"       from "TODO"       [2022-01-27 周四 16:42]
@@ -69,22 +70,44 @@ SCHEDULED: <2022-02-26 周六 18:00 ++1w> DEADLINE: <2022-02-28 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#C] 每周完成leetcode一道题 [1/1]                           :learn:
-SCHEDULED: <2022-02-21 周一 09:00 ++1w>
+** TODO [#C] 每周完成leetcode一道题 [0/1]                           :learn:
+SCHEDULED: <2022-02-28 周一 09:00 ++1w>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2022-02-15 周二 09:29]
+:LAST_REPEAT: [2022-02-21 周一 09:53]
 :END:
+- State "DONE"       from "TODO"       [2022-02-21 周一 09:53]
 - State "DONE"       from "TODO"       [2022-02-15 周二 09:29]
 - Note taken on [2022-02-14 周一 09:51] \\
   学到了一个很新颖的思路, n个队伍比赛在每个队伍失败一次就淘汰的情况下最多打几场,
   答案是n-1场, 因为最后只有一个队伍获胜
-- [X] 完成一道题
+- [ ] 完成一道题
 ** TODO [#A] 每周学习《代码之外的生存指南》5篇 [0/5]                :learn:
-SCHEDULED: <2022-02-21 周一 +1d>
+SCHEDULED: <2022-02-28 周一 +1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-02-19 周六 17:09]
+:LAST_REPEAT: [2022-02-23 周三 17:39]
+:END:
+- State "DONE"       from "TODO"       [2022-02-23 周三 17:39]
+:LOGBOOK:
+CLOCK: [2022-02-25 周五 17:04]--[2022-02-25 周五 17:29] =>  0:25
+CLOCK: [2022-02-25 周五 15:35]--[2022-02-25 周五 16:00] =>  0:25
+CLOCK: [2022-02-25 周五 14:33]--[2022-02-25 周五 14:58] =>  0:25
+CLOCK: [2022-02-25 周五 13:50]--[2022-02-25 周五 14:15] =>  0:25
+CLOCK: [2022-02-25 周五 11:11]--[2022-02-25 周五 11:36] =>  0:25
+CLOCK: [2022-02-25 周五 10:41]--[2022-02-25 周五 11:06] =>  0:25
+CLOCK: [2022-02-24 周四 20:39]--[2022-02-24 周四 21:04] =>  0:25
+CLOCK: [2022-02-24 周四 17:06]--[2022-02-24 周四 17:31] =>  0:25
+CLOCK: [2022-02-24 周四 16:31]--[2022-02-24 周四 16:56] =>  0:25
+CLOCK: [2022-02-24 周四 14:29]--[2022-02-24 周四 14:54] =>  0:25
+CLOCK: [2022-02-24 周四 13:15]--[2022-02-24 周四 13:40] =>  0:25
+CLOCK: [2022-02-24 周四 11:30]--[2022-02-24 周四 11:55] =>  0:25
+CLOCK: [2022-02-24 周四 11:00]--[2022-02-24 周四 11:25] =>  0:25
+CLOCK: [2022-02-23 周三 18:22]--[2022-02-23 周三 18:47] =>  0:25
+CLOCK: [2022-02-23 周三 17:52]--[2022-02-23 周三 18:17] =>  0:25
+CLOCK: [2022-02-23 周三 17:22]--[2022-02-23 周三 17:39] =>  0:17
+CLOCK: [2022-02-23 周三 16:38]--[2022-02-23 周三 17:03] =>  0:25
+CLOCK: [2022-02-23 周三 15:26]--[2022-02-23 周三 15:51] =>  0:25
 :END:
 - State "DONE"       from "TODO"       [2022-02-19 周六 17:09]
 - [ ] 第一篇
@@ -93,11 +116,13 @@ SCHEDULED: <2022-02-21 周一 +1d>
 - [ ] 第四篇
 - [ ] 第五篇
 
-** TODO [#A] 每周40个番茄钟 [0/5]                                    :work:
-DEADLINE: <2022-02-25 周五 09:00 +1w> SCHEDULED: <2022-02-21 周一 09:00 +1w>
+** TODO [#A] 每周45个番茄钟 [0/5]                                    :work:
+DEADLINE: <2022-03-04 周五 09:00 +1w> SCHEDULED: <2022-02-28 周一 09:00 +1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-02-19 周六 13:44]
+:LAST_REPEAT: [2022-02-25 周五 17:35]
 :END:
+- State "DONE"       from "TODO"       [2022-02-25 周五 17:35] \\
+  49钟
 - State "DONE"       from "TODO"       [2022-02-19 周六 13:44] \\
   52钟
 :LOGBOOK:
@@ -105,8 +130,8 @@ DEADLINE: <2022-02-25 周五 09:00 +1w> SCHEDULED: <2022-02-21 周一 09:00 +1w>
 - [ ] 
 - [ ] 
 - [ ] 
-- [ ] 
-- [ ] 
+- [ ]
+- [ ]
 ** WAIT [#B] 学习《重构 改善既有代码的设计》                        :learn:
 :PROPERTIES:
 :BLOCKER:  olp("work.org" "Next Action/每周学习《代码之外的生存指南》5篇")
@@ -146,28 +171,10 @@ CLOSED: [2022-02-17 周四 14:17] SCHEDULED: <2022-02-17 周四 13:15>
 :LOGBOOK:
 CLOCK: [2022-02-17 周四 13:35]--[2022-02-17 周四 14:00] =>  0:25
 :END:
+** TODO [#A] 每月产出一篇技术文档                                      :m8:
+SCHEDULED: <2022-03-01 周二 00:00 +1m>
 * Appointment
 * Project
-** SCH [#A] 优化状态显示                                               :m8:
-SCHEDULED: <2022-02-21 周一 09:00> DEADLINE: <2022-02-24 周四 21:00>
-:PROPERTIES:
-:BLOCKER: children
-:END:                          
-*** TODO 支持gm切换部分状态显示
-SCHEDULED: <2022-02-21 周一 11:00>
-:PROPERTIES:                          
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:Effort:   3:20
-:END:                          
-*** WAIT 新增状态信息栏
-:PROPERTIES:
-:Effort:   6:40
-:END:
-*** WAIT 测试
-:PROPERTIES:                          
-:TRIGGER+: parent todo!(DONE)
-:Effort:   3:20
-:END:
 ** Archive                                                        :ARCHIVE:
 *** DONE [#A] 战斗表现学习                                             :m8:
 CLOSED: [2022-02-19 周六 13:42] SCHEDULED: <2021-10-15 周五 09:00> DEADLINE: <2021-10-23 周六 18:00>
@@ -316,6 +323,68 @@ CLOSED: [2022-02-19 周六 13:44] SCHEDULED: <2022-02-19 周六 13:41>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE [#A] 优化状态显示                                             :m8:
+CLOSED: [2022-02-23 周三 15:04] SCHEDULED: <2022-02-21 周一 09:00> DEADLINE: <2022-02-24 周四 21:00>
+:PROPERTIES:
+:BLOCKER: children
+:ARCHIVE_TIME: 2022-02-26 周六 16:40
+:END:                          
+**** DONE 支持gm切换部分状态显示
+CLOSED: [2022-02-21 周一 14:04] SCHEDULED: <2022-02-21 周一 11:00>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:Effort:   3:20
+:END:                          
+:LOGBOOK:
+CLOCK: [2022-02-21 周一 13:39]--[2022-02-21 周一 14:04] =>  0:25
+CLOCK: [2022-02-21 周一 13:09]--[2022-02-21 周一 13:34] =>  0:25
+CLOCK: [2022-02-21 周一 11:16]--[2022-02-21 周一 11:41] =>  0:25
+CLOCK: [2022-02-21 周一 10:46]--[2022-02-21 周一 11:11] =>  0:25
+CLOCK: [2022-02-21 周一 10:16]--[2022-02-21 周一 10:41] =>  0:25
+:END:
+**** DONE 新增状态信息栏
+CLOSED: [2022-02-23 周三 09:18] SCHEDULED: <2022-02-21 周一 14:04>
+:PROPERTIES:
+:Effort:   6:40
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+:LOGBOOK:
+CLOCK: [2022-02-22 周二 19:58]--[2022-02-22 周二 20:23] =>  0:25
+CLOCK: [2022-02-22 周二 19:23]--[2022-02-22 周二 19:48] =>  0:25
+CLOCK: [2022-02-22 周二 17:18]--[2022-02-22 周二 17:43] =>  0:25
+CLOCK: [2022-02-22 周二 16:48]--[2022-02-22 周二 17:13] =>  0:25
+CLOCK: [2022-02-22 周二 15:30]--[2022-02-22 周二 15:55] =>  0:25
+CLOCK: [2022-02-22 周二 15:00]--[2022-02-22 周二 15:25] =>  0:25
+CLOCK: [2022-02-22 周二 14:20]--[2022-02-22 周二 14:50] =>  0:30
+CLOCK: [2022-02-22 周二 13:37]--[2022-02-22 周二 14:02] =>  0:25
+CLOCK: [2022-02-22 周二 13:07]--[2022-02-22 周二 13:32] =>  0:25
+CLOCK: [2022-02-22 周二 11:17]--[2022-02-22 周二 11:42] =>  0:25
+CLOCK: [2022-02-22 周二 10:46]--[2022-02-22 周二 11:11] =>  0:25
+CLOCK: [2022-02-22 周二 10:16]--[2022-02-22 周二 10:41] =>  0:25
+CLOCK: [2022-02-22 周二 09:16]--[2022-02-22 周二 09:41] =>  0:25
+CLOCK: [2022-02-21 周一 17:08]--[2022-02-21 周一 17:33] =>  0:25
+CLOCK: [2022-02-21 周一 16:38]--[2022-02-21 周一 17:03] =>  0:25
+CLOCK: [2022-02-21 周一 16:08]--[2022-02-21 周一 16:33] =>  0:25
+CLOCK: [2022-02-21 周一 15:33]--[2022-02-21 周一 15:58] =>  0:25
+CLOCK: [2022-02-21 周一 15:03]--[2022-02-21 周一 15:28] =>  0:25
+:END:
+**** DONE 测试
+CLOSED: [2022-02-23 周三 15:04] SCHEDULED: <2022-02-23 周三 09:18>
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:Effort:   3:20
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+:LOGBOOK:
+CLOCK: [2022-02-23 周三 14:37]--[2022-02-23 周三 15:02] =>  0:25
+CLOCK: [2022-02-23 周三 13:55]--[2022-02-23 周三 14:20] =>  0:25
+CLOCK: [2022-02-23 周三 13:30]--[2022-02-23 周三 13:55] =>  0:25
+CLOCK: [2022-02-23 周三 13:05]--[2022-02-23 周三 13:30] =>  0:25
+CLOCK: [2022-02-23 周三 11:07]--[2022-02-23 周三 11:32] =>  0:25
+CLOCK: [2022-02-23 周三 10:37]--[2022-02-23 周三 11:02] =>  0:25
+CLOCK: [2022-02-23 周三 09:48]--[2022-02-23 周三 10:13] =>  0:25
+CLOCK: [2022-02-23 周三 09:18]--[2022-02-23 周三 09:43] =>  0:25
 :END:
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
