--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -37,8 +37,10 @@ DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
 | [2022-02-20] | energy bill   |      -50 |
 | [2022-02-20] | takeout       |      -36 |
 | [2022-02-20] | takeout       |      -45 |
-|              |               | -2419.26 |
-#+TBLFM: @19$3=vsum(@2$3..@-1$3)
+| [2022-02-23] | shopping      |     -2.5 |
+| [2022-02-25] | shopping      |     -2.5 |
+|              |               | -2424.26 |
+#+TBLFM: @21$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
   2. 额外疏通水池下水管道50
@@ -50,12 +52,20 @@ DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-02-28 周一 23:00 ++1w> SCHEDULED: <2022-02-25 周五 18:00 ++1w>
+DEADLINE: <2022-03-07 周一 23:00 ++1w> SCHEDULED: <2022-03-04 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-02-19 周六 15:38]
+:LAST_REPEAT: [2022-02-26 周六 16:34]
 :END:
+- State "DONE"       from "TODO"       [2022-02-26 周六 16:34] \\
+  1. 实现状态显示工单
+     - 新增gm指令支持部分战斗中ui隐藏
+     - 新增一个纯数据的状态记录组件, 用来发送每个角色各种状态信号
+     - 新增状态条来显示每个角色的具体状态属性
+  2. 整理战斗组件结构
+  ------------------------------------------------
+  1. 严格遵循番茄工作法还是有好处的, 感觉专注了很多, 功效提高了
 - State "DONE"       from "TODO"       [2022-02-19 周六 15:38] \\
   1. 优化战斗退出
      - 战斗中退出, 重开都会给服务端发送新的协议
