--- a/src/org/ref/life/软技能.org
+++ b/src/org/ref/life/软技能.org
@@ -562,7 +562,6 @@ cons: 需要多种技能, 风险大, 长时间工作
 最好使用一些工具来记录你每天的时间都去哪里了. 然后根据数据来进行相应的处理. 即找
 浪费的点, 然后消除它
 
-
 ** 形成惯例的重要性
 生产力的真正秘诀在于, 长期做一件小事. 正是我们每天行为的日积月累, 可以让我们生活
 的每一个方面都得到提升
@@ -574,3 +573,372 @@ cons: 需要多种技能, 风险大, 长时间工作
 *** 不要过于沉迷于惯例
 要注意是生活中总是会有意外发生, 所以惯例的安排要具有一定的灵活性, 你需要从容面对
 意外
+
+** 培养习惯
+成就我们的恰恰是那些不断重复做的事, 因此, 优秀不是一种行为, 而是一种习惯.
+*** 习惯的构成
+习惯由三个部分构成:
+- 暗示: 某个契机, 场景会驱动你做某件事
+- 惯例: 习惯的主体, 收到暗示时自发做的事
+- 奖励: 维持习惯的关键, 也许是物质奖励或者是精神上的满足
+我们的大脑非常易于养成习惯, 长时间坚持惯例便越可能形成习惯. 习惯是一种自发的行动,
+养成良好的习惯可以让你成功.
+*** 找到坏的习惯, 改正
+首先要找到你的坏习惯, 标准很简单, 什么事情你做起来是觉得内疚的. 想停止却总是推迟
+到另一天的, 这种一般就是坏习惯, 这件让你觉得内疚的事就是惯例.
+找到坏习惯后首先分析一下什么是这个坏习惯的暗示, 什么是这个坏习惯的奖励. 一般来说
+习惯是很难戒掉的, 比较可行的方式是替换惯例. 保留暗示和奖励.
+比如你有一个坏习惯是晚上9点后喜欢吃东西, 暗示一般来说是因为这个时间点可能饿了. 奖
+励则是饱腹感. 所以你可以准备一些没有热量的黄瓜, 饿的时候吃它. 这样一个坏习惯就变
+成了一个普通的习惯了.
+
+*** 养成新习惯
+养成新习惯的方式也要符合习惯的基本构成, 暗示, 惯例, 奖励, 三要素缺一不可. 所以找
+到一个好的惯例, 比如每天跑步, 暗示则是在每晚的9点, 奖励则是跑完之后可以玩一个小时
+的游戏. 如果你严格按照这个规则长期执行, 那么很容易就会养成每天跑步的习惯.
+
+** 分解任务
+*** 为什么大型任务难以执行
+1. 大型任务会带给人严重的心理负担, 因为看起来非常难以完成, 让人不自禁的想要拖延
+2. 大型任务难以明确定义, 人不知道从哪里开始下手.
+3. 大型任务难以估计时间
+*** 分解任务
+任何大型任务都可以被分解成一个个小型任务, 正如在庞大的软件也是由一行行代码构成的.
+吃掉大象的唯一方式, 就是一口一口的吃.
+分解任务有很多好处, 大型任务之所以难以处理的原因之一就是缺少一些关键信息导致难以
+明确定义, 再分解为小任务的过程中, 你需要明确这些缺失的信息来帮你进行分解. 此外每
+个小任务都只是整体的一部分, 出现了错误也很容易处理.
+对于分解出来的每个小任务, 应该都是目标明确, 时间可以评估, 实现不复杂的
+
+** 努力工作的价值
+聪明的工作是不够的, 想要成功必须要努力的工作, 一切有价值的东西无不是努力工作的成
+果. 正如长跑比的不是谁的冲刺更有力, 而是比谁的耐力更持久. 尽管努力工作非常辛苦,
+但坚持努力工作时通往成功地唯一坦途.
+
+** 任何行动都比不行动要强
+任何行动都比没有行动要好, 特别是你长时间处于一个不利的态势时, 如果这是一个错误.
+至少你学到了一些东西, 它就不再是一个错误. 如果你仍然停滞不前, 那你就学不到任何
+东西
+*** 为什么拒绝采取行动
+大部分是因为恐惧, 害怕把事情搞砸, 害怕做了错误的选择. 但事实上哪怕是错误的选择
+也比无所作为要强, 要知道人很少因为根据现有知识做了某个行动而后悔, 却会对面对机
+会而裹足不前抱憾终生
+*** 不采取行动会发生什么
+时间在被浪费, 事情毫无进展, 生活没有任何改变. 所以不要无所作为, 当下就是行动
+时刻, 当下就是决策时刻
+*** 可能发生的最坏情况
+大多数时候, 最坏的情况不过是你发现这个行动不对, 你排除了一个错误的选项, 采取
+正确的行动是完全来得及的. 如果不采取任何行动, 你真的会面临到最坏的情况. 哪怕
+是在做影响生活的重大决策, 扔骰子做决策都比无所作为要强
+*** 跑起来的车更容易转向
+要知道一辆车停止的时候是没法转向的, 运行起来的时候可以很容易的调整它的方向. 只有
+车开起来, 你才知道哪个方向是正确的, 即便错误了也可以转过去. 坐在车库里永远不知道
+哪边才是正确方向
+
+*** 检查表
+[[file:../../res/image/active_check.jpg]]
+* 理财
+金钱只是一种工具, 它会带你前往任何地方, 但是不会取代你成为司机
+** 怎样支配薪水
+你支配你薪水的方式决定了你什么时候可以退休
+*** 拒绝短期思维
+长远的考虑薪资的花费方式, 而不是短期的来考虑, 不要按分期的思维来考虑, 而是要看
+总的代价. 如果工资提了500, 然后立即想我这个月的零花钱又多了500, 这样你的花费
+将会永远和你的收入持平, 无论你每个月能够赚到多少钱, 你都不会有任何积蓄. 所以要
+量入为出, 统计自己每年的总收入, 根据自己的总收入来决定自己的总支出, 也决定了每
+年的结余.
+*** 资产与负债
+运用另一种思维来理财. 即资产负债观. 资产即是一切维护成本小于收益的东西, 而负债则
+相反. 所以你的资产越多, 你的财产便会随着时间慢慢增加; 你的负债越多, 你的财产便会
+随着时间慢慢减少. 如果你每个月的薪资都用来购买资产, 你的财富的增长速度会越来越快,
+一定可以在年老之前退休. 反之, 你无论如何工作都无法留下任何积蓄.
+*** 回到薪水
+如果你每个月有1w的结余, 10年也只能攒100w, 并且伴随着通货膨胀, 这一份价值还要缩水.
+所以即便你有长期思维不乱消费, 仅靠薪水也是很难实现提前退休, 财富自由的. 必须要将
+你的薪资用来购买资产, 让资产帮你赚到更多的钱.
+** 薪酬谈判
+薪酬谈判非常重要, 进入公司之后公司的印象会固定在第一印象, 因此薪酬谈判既能提高自
+己的待遇, 也能提高雇主对你的印象
+*** 谈判始于求职之前
+你的声望以及影响力能够极大的影响你谈判时的底气, 你的声望越高, 你的谈判的余裕越大,
+越可能获得更高的薪水, 因此积极自我营销, 让自己更加出名吧.
+*** 获得工作的几种方式
+1. 去市场上主动寻找职位, 这种事最坏的, 因为你有求于人, 在谈判时你将处于弱势地位
+2. 经过别人的推荐进入公司, 这种稍微好一点, 本质上你是借用推荐人的公信力为你背书,
+   公司不一定知道你很急切的寻找这个职位, 所以谈判时能获得一定的优势.
+3. 公司主动要求你入职, 无需面试. 这种是最好的, 你在薪酬谈判中将完全掌握主动权.
+   但这种要求你有较高的声望
+*** 先出价者输
+永远不要先出价, 一旦你先出价你的工资只会比你出的价更低, 完全丧失了谈判的空间. 如
+果你想我可以出一个非常高的价格, 那么对方的很可能直接拒绝或者用一个很低的价格回应
+你.
+如果对方问你你的期望或者当前薪资, 一定要用委婉的话术拒绝, 引导对方说出他们的预算.
+比如说:
+#+begin_quote
+如果贵公司能够说出预算的范围, 尽管我无法说出准确的期望, 我可以告诉贵公司
+的范围是否符合我的心理预期
+#+end_quote
+#+begin_quote
+我宁愿不告诉您我现在的薪水, 如果它高于您的报价, 为了合适的工作我也愿意自愿降低薪
+资水平. 相反, 我也不想自贬身价, 相信您一定能够理解
+#+end_quote
+*** 一些建议
+1. 收到offer之后也可以还价, 胃口可以大一点, 毕竟雇主已经在你身上花费大量的精力
+   面试.
+2. 还价次数不要超过两次
+3. 如果接受报价就不要反悔, 要么接受, 要么直接放弃
+4. 谈判前弄清楚自己的真正价值, 得到合理的薪资范围, 这样谈判可以判断薪资是否合适
+5. 货比三家, 多找几家公司面试. 手里已经拥有offer时谈价更有底气
+** 期权
+期权就是选择权, 花费一定权利金获得在未来的某个时刻可以以固定的价格买入或者售出定
+额的股权的选择权
+*** 举例
+假如你认为微软的股票在未来的3个月会涨, 比如现在是每股100$, 3个月后会涨到200$,
+假设你手里有1000$
+- 直接交易: 你买10股, 3个月后如果每股变为200$. 你则净赚了1000$的利润. 如果变为
+  50$, 你则净亏500$
+- 买入期权: 内容为3个月后以110$每股的价格卖给微软的股票, 每股权利金10$. 你可以
+  购入100份. 如果3个月后每股变为200$, 你可以花11000$买入100份微软股票, 你将净赚
+  100*(200-110)-1000 = 8000$, 如果变为50$, 你可以直接选择不交易, 净亏1000$
+*** 说明
+期权实际上是一种投资工具, 也是一个金融杠杆, 可以让你赚的更多, 也会亏得更快.
+- 看涨期权: 在未来的某个时间以固定的价格买入固定份额股票的选择权
+- 看跌期权: 在未来的某个时间以固定的价格售出固定份额股票的选择权
+*** 卖出期权
+卖出期权(沽出期权)是指你创建了一份合约来在未来的某个时间完成承诺. 你将会作为权利
+金的收取方. 和买入期权不同的是, 卖出期权的风险很大, 收益是固定的(权利金). 实际上
+卖出期权是在赌盘的另一边下注, 你赌的不是股价的变化, 而是股价要么不变, 要么走向和
+期权相反的方向.
+*** 期权组合
+期权组合的目的一般都是风险对冲, 以部分潜在收益为代价降低风险, 比如:
+- 备兑看涨期权: 买入股票的同时卖出看涨期权, 适用于股价变化不大, 长期持有的情况.
+  可以获得权利金的额外收益
+- 配对看跌期权: 购买股票时同时购买股票的看跌期权, 股票如果上涨你将享受全部收益,
+  如果下跌也有期权合约兜底
+
+** 房地产投资
+房地产投资是所有投资中最稳定, 资本负债率最高的
+*** 为什么投资房地产
+尽管房地产的价格可能有很大的波动, 但我们的主要目标不是买卖房地产的收益, 而是租金.
+无论市场如何变化, 租金都是很稳定的.
+银行乐于为你个购买房产提供大量贷款, 如果你买股票显然银行是不可能为你提供贷款的.
+如果你支付10%的首付, 剩下的90%用30年的按揭贷款来买房, 然后将其出租. 最好每个月
+的租金可以完美抵消贷款(甚至还有剩余), 过了30年之后, 相当于你用10%的资金购买了
+一处房产.
+另外遇到通货膨胀时, 房租是会跟着一起涨的, 但是你每个月需要换的钱是不变的, 多涨
+的房租可以完美对冲掉通胀的影响.
+*** 怎么做
+注意, 永远不要通过倒卖或者低价抵押来快速致富, 这样做终究会自食恶果.
+**** 学习
+在房地产投资领域, 购入房产的时候最赚钱. 因为房地产的流动性不强, 所以价格差距很
+悬殊. 这意味着如果你聪明又勤奋, 可以用很低的价格买购买房地产. 要想做到这一点首
+先要进行市场研究, 研究房产的位置, 大小, 租金, 价值. 并且要在脑海中模拟如果够
+买, 每个月需要多少维护费用, 能够为你产生多少现金流.
+**** 行动
+一般与一些中介签约, 委托它们有合适的地产交易时通知你. 要记住, 购买时出价一定要
+足够低, 低到中介都无法向业主启齿的那种. 尽管大部分时候会被拒接, 但总有人不在乎
+价格, 最后你可以以很低的价格购买房产.
+看房之后签约, 签约之后验房, 验房之后申请贷款来完成合同
+**** 委托物业对房产进行管理
+卖完房产之后, 一定不要自己管理, 这种工作非常耗费精力, 最好找一家可靠的物业来替你
+管理房产, 让他们来负责房产的出租, 收费, 维护等工作. 尽管你可能要将租金的一部分做
+为手续费支付给他们, 但这个是值得的, 通过这样做你可以没有任何负担的来购买房产.
+
+** 退休计划
+退休并不一定需要等到60岁
+*** 逆向思维
+规划退休计划的关键就是利用逆向思维, 计算每个月需要的生活费用. 找出办法来确保自己
+的收入能够满足这个要求并留有余裕.
+简单来说, 最好的方式就是减少每个月的开支, 这样你既能攒下更多的钱, 也能更早的退休.
+*** 退休方案
+一旦你计算出你每个月需要的开支, 如果你的被动收入大于等于你的开支, 你就可以正式退
+休了(被动收入就是不用工作就能得到的收入), 不要有必须需要花费储蓄来退休的思想. 基
+于这个思路, 有两套方案
+**** 养老保险
+优点是省心省力, 公司会为你缴纳. 缺点是必须要等到老年才能开始领取, 不能够提前退休
+**** 致富
+可以实现提前退休, 但并不容易, 举例:
+- 循序渐进的购买房地产
+- 创立公司
+- 购买股票基金
+- 购买版权
+不过这些都需要原始基金, 积累的最佳方式就是多挣, 少花, 聪明的投资
+
+** 债务的危害
+*** 为什么债务一般是不好的
+因为当你债台高筑的时候, 是没有多余的钱进行投资的, 也就无从致富
+*** 常见的债务错误
+1. 一边存钱一边欠债, 如果你存钱的收益没有债的利率高, 那你应该优先还贷,
+   这是个很简单地数学问提
+2. 还债的次序不对, 应该优先环利息最高的债务, 依然是简单地数学问题.
+3. 最大的错误就是不必要的债务, 比方说贷款买车. 正确的顺序应该是先攒钱
+   然后在买车, 这样你将不会多花一分钱, 而且在攒钱的途中还会产生收益
+*** 什么样的债务是好的债务
+即债务的回报要大于债务的利息, 那这种债务就是良性的债务, 比如房地产. 所以
+背债的底线就是在确保背债之前, 这比债务实际上是资产.
+
+* 健身
+人的身体就是人的灵魂最好的写照
+** 为什么需要健身
+健身不仅是保持健康体魄的关键要素之一, 也是灵活的, 具有创造力的脑力活动的基础
+*** 自信心
+健身可以让你拥有自信心, 这是成功最重要的因素. 因为好的身材可以让你感觉良好, 它会
+改变你对自己的认识, 改变别人对你的认识.
+*** 大脑
+脑力劳动是以身体为基础的, 身体越好, 大脑越聪明, 越具有创造力, 高效越高.
+*** 恐惧
+如果你想活得长久, 不因为各种各样的疾病猝死, 不想生活在朝不保夕的恐惧心态之中. 那
+么你也需要健身. 也许恐惧才是真正的驱动力, 不要等到身体真的已经崩坏的时候才开始健
+身, 而是从现在开始
+** 设定健身标准
+如果没有目标, 那就永远达不成目标
+*** 挑选一个具体的目标
+并不是说没有目标健身就没有效果, 而是没有目标你会很难坚持. 通常要选择目标且
+仅选择一个目标, 因为很多目标是冲突的, 比如增肌和减脂就是冲突的. 所以选择一个
+目标只为这个目标而努力
+- 减脂
+- 增肌
+- 增强力量
+- 增强耐力
+- 改善心脑血管健康
+*** 创建里程碑
+选定目标之后, 比如说减重30kg, 这个目标还是很难实现的, 所以要将其拆分为一个一个
+的易于实现的里程碑, 比如说每两周减1kg, 这个看起来就容易了很多. 每周达到里程碑
+的成功势头会驱使你不断向最终目标前进, 最终成功达到目标
+*** 测量进展
+当你向目标前进时, 每隔一定时间检测自己的进展是非常重要的, 你要知道你是否在向着正
+确的方向前进. 一般仅选择一个指标进行观测, 比如体重. 每天都要测量, 但是以每周的平
+均数据作为观测结果记录下来(每日的体重波动性非常大, 喝水, 吃饭都可能影响到它).
+*** 保持健康的生活方式
+达成目标之后, 如果你迅速回归之前的生活方式, 那么一切的努力都白费了, 甚至会更坏.
+所以达成之后让正常生活处在之前的健身生活和正常生活之间, 继续保持不像之前那么严格
+的饮食和健身的标准.
+** 减肥原理
+减肥就是让人体摄入的热量小于身体消耗的热量
+*** 什么是热量
+一般以卡路里为单位, 一卡路里指的是让1kg水在1标准大气压下温度上升1摄氏度所需要的能
+量, 我们摄入的食物一般都含有能量.
+#NAME: 热量表
+| name          | calorie |
+|---------------+---------|
+| protein       |       4 |
+| carbohydrates |       4 |
+| fat           |       9 |
+| fibre         |       0 |
+*** 摄入热量
+一般食物的标签的都带有食物的热量, 常见简单食物的热量也是可以查到的, 但是对于各种
+菜品, 由于你无法得知制作过程以及原料非常复杂, 其热量很难计算. 所以尽量吃简单的
+食物方便跟踪摄入热量.
+*** 消耗热量
+为了维持人类的生存, 身体每天都需要消耗一定数量的热量来维持身体的运行. 这个消耗叫
+做BMR, 可以根据身高, 体重, 年龄, 性别来计算出一个估算值. 以这个值为基点可以大概
+估算每天消耗的热量
+#NAME: 消耗表
+| exercise level         | formula   |
+|------------------------+-----------|
+| never                  | BMR*1.2   |
+| light(1-3 per week)    | BMR*1.375 |
+| moderate(3-5 per week) | BMR*1.55  |
+| heavy(6-7 per week)    | BMR*1.725 |
+| extremely(2 per day)   | BMR*1.9   |
+*** 制定计划
+如果想要实现每周减掉0.5kg的计划, 那么相当于每周要产生3350cal的能量赤字, 换言之
+每天需要多消耗478cal的热量. 假如你是轻度锻炼的那一档次, 每天的消耗为2000cal,
+那么你每天摄入的能量必须要低于(2000-478=1522)cal, 这样就可以实现每周减0.5kg的
+计划.
+注意你减掉的不全是脂肪, 还会有一部分肌肉.
+** 动力
+实现健身最难的就是保持健身的动力
+*** 什么驱动你
+有没有什么事情可以驱动你, 激励你坚持下去. 比如说坚持下去可以买一双新跑鞋?
+*** 不要过早奖励
+如果给自己设定一个奖励目标作为驱动力, 比如健身后玩游戏, 那么一定不要先玩游戏再去
+健身. 在你玩完之后, 你会发现你已经丧失了健身的动力, 一定要先运动再玩, 不要提前
+预支奖励.
+*** 保持动力的做法
+1. 各个位置张贴图片, 想象自己以后成为的样子, 比如想要拥有施瓦辛格一样的身材就贴上
+   它的图片吧
+2. 制作进度图表, 没有人想要打破长时间的坚持记录, 想想你已经坚持这么久了, 这也是很
+   强的驱动力
+3. 游戏化, 有一些app可以以做游戏的形式让你参与运动
+4. 听有声书, 跑步的时候可以听有声书籍
+*** 最重要的是坚持
+如果有动力来驱使你坚持, 那自然是最好的, 如果动力消失了, 也一定要完成计划. 试着通
+过提前计划, 来消除生活中需要消耗意志力的做决定环节. 当你的动力消失殆尽, 用原则来
+替代动力.
+** 增肌
+*** 肌肉是如何生长的
+本质上就是让肌肉感受到压力, 超负荷运作. 通过一定强度的训练来让你的身体明白如果肌
+肉不增长就无法完成目前的训练, 你需要更大, 更强的肌肉.
+*** 举重的基础知识
+- 动作, 字面含义
+- 组, 完成某个动作的连续环节, 比如10个动作
+- 休息, 通常做完一组运动之后需要休息一段时间
+*** 目标
+**** 力量
+重复次数少, 休息时间长. 一般个动作重复1-6次, 并且每次要举起自己能够举起的最大重量,
+判断方法是, 如果你做3次, 那么你的身体没有做第四次的力气了
+**** 规模
+重复8-12次, 休息间隔适中. 这个过程中每次也要尽量举起最大重量
+**** 耐力
+高次数, 短间隔, 重复12-20次. 增进耐力会极大的增加你的抗疲劳程度, 但是肌肉不会变大,
+甚至可能缩小
+*** 计划
+如果以一周为单位, 可以做出如下安排
+#NAME: 健身时间表
+| level              | monday          | tuesday | wednesday       | thursday | friday          | saturday | sunday |
+|--------------------+-----------------+---------+-----------------+----------+-----------------+----------+--------|
+| beginner(2-3 week) | push, pull, leg |         | push, pull, leg |          | push, pull, leg |          |        |
+| moderate           | upper limbs     |         | lower limbs     |          | upper limbs     |          |        |
+| advanced           | push            |         | pull            |          | leg             |          |        |
+*** 举重动作
+具体动作定义可以参考: [[https://www.bodybuilding.com/en-CN/index][构建身体]]
+- 推
+  - 卧推, 这是核心的胸部练习之一。
+  - 哑铃飞鸟, 另一种很棒的胸部练习，可以真正帮助你增大胸肌。
+  - 过顶臂屈伸, 我发现这是锻炼肱三头肌的最佳动作之一。它可以锻炼整个肱三头肌.
+  - 滑轮下压, 这个动作不是针对肱三头肌，而是肱三头肌的外侧头
+  - 杠铃推举, 这是最好的肩部练习之一，也是很好的复合运动。
+  - 哑铃侧平举, 这个动作锻炼三角肌的外侧部.
+- 拉
+  - 单臂哑铃划船, 它对背部肌肉的增长效果无以伦比。每次练习一只手臂以获得最大的效果。
+  - 引体向上, 主要用于锻炼背部，增强背阔肌。
+  - 哑铃交替弯举, 这是锻炼肱二头肌最好的方法之一。
+- 腿部
+  - 深蹲, 这是重量练习的王者！没什么动作能比深蹲让你感觉更好
+  - 硬拉, 这是另一个很好的练习，但是有点儿难学。别紧张，提着杠铃慢慢练习就是了。
+  - 提踵, 怎么锻炼小腿肌肉并不重要，但要确保做这个动作时要有一些变化
+最有价值的几个动作是: 深蹲、硬拉、卧推和杠铃推举
+*** 吃什么
+每天每磅肌肉摄入1-1.5克蛋白质, 肌肉重量为体重乘以你的(1-体脂率). 除此之外就不需要
+什么了, 但你如果一定想要吃补剂的话可以试下肌酸, 这个确实是有效果的.
+** 完美腹肌
+不需要额外训练, 只要体脂够低就会有腹肌
+但是要做到这一点是非常困难的, 由超重减到正常相对容易, 但是由正常减到健美身材实际
+上是在跟身体的本能对抗. 当你的脂肪过少时, 身体会自发的提高肌肉分解速率, 提高脂肪
+保有率, 多分泌饿素, 让你容易饥饿很难饱腹. 所以必须要经过非常严格的饮食控制和锻炼
+计划才能保持住健美身材.
+** 启动跑步程序
+*** 跑步的优点
+- 最简单方便的锻炼心肺功能的运动
+- 燃烧多余脂肪, 抑制饥饿
+- 跑步之后人会很舒服
+- 增强膝盖关节, 提高骨骼密度
+*** 如何做到
+1. 循序渐进, 如果你没有基础就不要一开始就定一个很宏大的计划, 先每天20分钟, 逐步
+   过渡到高里程
+2. 重在坚持, 无论计划多么美好, 坚持才是最重要的, 如果一周跑三天就一定要坚持下去
+** 站立式办公及其他窍门
+*** 站立办公
+如果有条件可以在跑步机上办公, 设置一个较高的坡度和较慢的速度, 能够在工作时燃烧脂
+肪, 如果没有条件, 站立办公也是极好的, 也能燃烧不少, 无论怎么样都比久坐要强.
+*** 饮食
+尽量自己制作, 可以再超市买一些半成品鸡肉, 鸡蛋, 通过微波炉加热, 简单快捷, 味道
+也不赖.
+** 高科技设备
+- 计步器, 统计步数
+- 无线体重计, 可以将你的体重信息自动上传到服务器, 便于追踪体重变化
+- 耳机, 锻炼时听一些有声读物
+- 健身应用, 帮助你设计, 追踪训练计划
+* 精神
+如果不征服自己, 你就会被自己征服
